初步完善国际化

--- a/src/main/java/org/olat/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/_i18n/LocalStrings_en.properties
@@ -11,7 +11,7 @@
 jump.to.content=Go to content
 jump.to.menu=Go to menu
 jump.to.nav=Go to navigation
-meta.description=OpenOLAT - infinite learning
+meta.description=OpenOLAT - infinite learning-ybj
 meta.keywords=OpenOLAT, OLAT, eLearning, learning platform, LMS, Learning Management System, LCMS, Learning Content Management System, Open Source, elearning, JAVA, IMS, QTI, SCORM, Content package, collaboration, usability, performance, scalability.
 not.logged.in=Not logged in
 other.users.online=People are online
