--- a/src/main/java/org/olat/modules/curriculum/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/curriculum/ui/_i18n/LocalStrings_en.properties
@@ -1,5 +1,5 @@
 #Tue Oct 16 08:33:04 CEST 2018
-add.curriculum=Create new curriculum
+add.curriculum=Create new curriculum  \u6dfb\u52a0
 add.curriculum.element=Create new element
 add.element.under=Add new element under this one
 add.member=Add user
