--- a/src/main/java/org/olat/admin/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/_i18n/LocalStrings_zh_CN.properties
@@ -1,77 +1,80 @@
 #Fri Mar 23 15:13:55 CET 2018
-bulkuserreplay.chkbx.onoff=\u68C0\u67E5\u76D2\u5F00\u542F\u610F\u5473\u7740\u91CD\u590D\u5F00\u542FAJAX\uFF08\u963F\u8D3E\u514B\u65AF\uFF09\u5173\u95ED
-bulkuserreplay.tt=\u7528\u6237\u540D\u7EBF\u5206\u79BB
-data.no.save=\u6CE8\u610F\uFF1A\u5728OLAT\u91CD\u65B0\u542F\u52A8\u7684\u65F6\u5019\u4F60\u7684\u4FEE\u6539\u4F1A\u88AB\u4E22\u5931\uFF01\u5982\u679C\u8981\u6C38\u4E45\u4FDD\u5B58\u4F60\u7684\u6539\u53D8\u4F60\u5C31\u8981\u8C03\u6574\u6587\u4EF6olat.properties.\u53D1\u884C\u7684\u65B0\u7248\u672C\u4F1A\u7ED9\u4F60\u63D0\u4F9B\u5168\u81EA\u52A8\u4FDD\u5B58\u7684\u529F\u80FD\u3002
-error.deleteworkflow.locked.by=\u5220\u9664\u7528\u6237\u7684\u5DE5\u4F5C\u6D41\u7A0B\u6B63\u5728\u88AB\u7528\u6237{{0}}\u7F16\u8F91,\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002
-manu.config.alt=\u8BF7\u914D\u7F6E\u4F60\u7684\u7CFB\u7EDF\u73AF\u5883
-menu.admin=\u7BA1\u7406
-menu.admin.alt=\u7BA1\u7406
-menu.advancedproperties=\u9AD8\u7EA7\u5C5E\u6027
-menu.advancedproperties.alt=\u9AD8\u7EA7\u5C5E\u6027\u641C\u7D22
+bulkuserreplay.chkbx.onoff=\u68c0\u67e5\u76d2\u5f00\u542f\u610f\u5473\u7740\u91cd\u590d\u5f00\u542fAJAX\uff08\u963f\u8d3e\u514b\u65af\uff09\u5173\u95ed
+bulkuserreplay.tt=\u7528\u6237\u540d\u7ebf\u5206\u79bb
+data.no.save=\u6ce8\u610f\uff1a\u5728OLAT\u91cd\u65b0\u542f\u52a8\u7684\u65f6\u5019\u4f60\u7684\u4fee\u6539\u4f1a\u88ab\u4e22\u5931\uff01\u5982\u679c\u8981\u6c38\u4e45\u4fdd\u5b58\u4f60\u7684\u6539\u53d8\u4f60\u5c31\u8981\u8c03\u6574\u6587\u4ef6olat.properties.\u53d1\u884c\u7684\u65b0\u7248\u672c\u4f1a\u7ed9\u4f60\u63d0\u4f9b\u5168\u81ea\u52a8\u4fdd\u5b58\u7684\u529f\u80fd\u3002
+error.deleteworkflow.locked.by=\u5220\u9664\u7528\u6237\u7684\u5de5\u4f5c\u6d41\u7a0b\u6b63\u5728\u88ab\u7528\u6237{{0}}\u7f16\u8f91,\u8bf7\u7a0d\u540e\u518d\u8bd5\u3002
+manu.config.alt=\u8bf7\u914d\u7f6e\u4f60\u7684\u7cfb\u7edf\u73af\u5883
+menu.admin=\u7ba1\u7406
+menu.admin.alt=\u7ba1\u7406
+menu.advancedproperties=\u9ad8\u7ea7\u5c5e\u6027
+menu.advancedproperties.alt=\u9ad8\u7ea7\u5c5e\u6027\u641c\u7d22
 menu.ajax=AJAX
-menu.ajax.alt=\u5728\u6574\u4E2A\u7CFB\u7EDF\u5185\u8C03\u6574AJAX\u6A21\u5F0F
-menu.bc=\u6587\u4EF6\u5939
-menu.bc.alt=\u6587\u4EF6\u5939\u548CThumbnails
-menu.caches=\u7F13\u5B58
-menu.cluster=\u805A\u7C7B
-menu.config=\u6838\u5FC3\u914D\u7F6E
-menu.config.alt=\u914D\u7F6E\u60A8\u7684\u6838\u5FC3\u529F\u80FD
-menu.devel=\u5F00\u53D1
-menu.devel.alt=\u5F00\u53D1\u5DE5\u5177
-menu.errors=\u9519\u8BEF
-menu.errors.alt=\u9519\u8BEF\u548C\u65E5\u5FD7\u7EA7\u522B
-menu.extensions=\u8F6F\u4EF6\u6A21\u5757
-menu.extensions.alt=\u5DF2\u5B89\u88C5\u7684\u8F6F\u4EF6\u6A21\u5757\u6E05\u5355
-menu.hibernate=ORM\u6570\u636E\u5E93
-menu.hibernate.alt=ORM\u6570\u636E\u5E93 / Hibernate
-menu.i18n=\u8BED\u8A00
-menu.i18n.alt=\u914D\u7F6E\u6807\u51C6\u548C\u88AB\u6FC0\u6D3B\u7684\u7CFB\u7EDF\u8BED\u8A00
-menu.imadmin=\u5373\u65F6\u6D88\u606F
-menu.imadmin.alt=\u804A\u5929\u4E0E\u77ED\u4FE1\u7BA1\u7406
-menu.infomsg=\u4FE1\u606F
-menu.infomsg.alt=\u4FE1\u606F\u901A\u77E5
-menu.javavm=Java\u865A\u62DF\u673A\u4FE1\u606F
-menu.jmx=Java\u7BA1\u7406\u6269\u5C55\uFF08Java Management Extensions\uFF09
-menu.jmx.alt=\u67E5\u770BJava\u6269\u5C55\u7BA1\u7406\u7684\u503C
+menu.ajax.alt=\u5728\u6574\u4e2a\u7cfb\u7edf\u5185\u8c03\u6574AJAX\u6a21\u5f0f
+menu.bc=\u6587\u4ef6\u5939
+menu.bc.alt=\u6587\u4ef6\u5939\u548cThumbnails
+menu.caches=\u7f13\u5b58
+menu.cluster=\u805a\u7c7b
+menu.config=\u6838\u5fc3\u914d\u7f6e
+menu.config.alt=\u914d\u7f6e\u60a8\u7684\u6838\u5fc3\u529f\u80fd
+menu.devel=\u5f00\u53d1
+menu.devel.alt=\u5f00\u53d1\u5de5\u5177
+menu.errors=\u9519\u8bef
+menu.errors.alt=\u9519\u8bef\u548c\u65e5\u5fd7\u7ea7\u522b
+menu.extensions=\u8f6f\u4ef6\u6a21\u5757
+menu.extensions.alt=\u5df2\u5b89\u88c5\u7684\u8f6f\u4ef6\u6a21\u5757\u6e05\u5355
+menu.hibernate=ORM\u6570\u636e\u5e93
+menu.hibernate.alt=ORM\u6570\u636e\u5e93 / Hibernate
+menu.i18n=\u8bed\u8a00
+menu.i18n.alt=\u914d\u7f6e\u6807\u51c6\u548c\u88ab\u6fc0\u6d3b\u7684\u7cfb\u7edf\u8bed\u8a00
+menu.imadmin=\u5373\u65f6\u6d88\u606f
+menu.imadmin.alt=\u804a\u5929\u4e0e\u77ed\u4fe1\u7ba1\u7406
+menu.infomsg=\u4fe1\u606f
+menu.infomsg.alt=\u4fe1\u606f\u901a\u77e5
+menu.javavm=Java\u865a\u62df\u673a\u4fe1\u606f
+menu.jmx=Java\u7ba1\u7406\u6269\u5c55\uff08Java Management Extensions\uff09
+menu.jmx.alt=\u67e5\u770bJava\u6269\u5c55\u7ba1\u7406\u7684\u503c
 menu.landingpages=\u9996\u9875
 menu.landingpages.alt=\u9996\u9875
-menu.layout=\u5E03\u5C40
-menu.layout.alt=\u5728\u5168\u7CFB\u7EDF\u8303\u56F4\u5185\u8C03\u6574\u5E03\u5C40
-menu.lock=\u9501\u4F4F
-menu.module=\u6A21\u5757
-menu.module.alt=\u6A21\u5757
-menu.notifications=\u901A\u77E5
-menu.notifications.alt=\u6570\u636E\u7EDF\u8BA1
-menu.onlinetranslation=\u7FFB\u8BD1\u5DE5\u5177
-menu.onlinetranslation.alt=\u628AOpenOLAT\u7FFB\u8BD1\u4E3A\u60A8\u7684\u6BCD\u8BED
-menu.onlinetranslation.customize=\u8BED\u8A00\u8C03\u6574\u5DE5\u5177
-menu.onlinetranslation.customize.alt=\u8BF7\u60A8\u5728OpenOLAT\u5B89\u88C5\u4E2D\u4F7F\u7528\u8BED\u8A00\u8C03\u6574\u5DE5\u5177\u6765\u8C03\u6574\u8BED\u8A00\u5143\u7D20
-menu.parent.customizing=\u81EA\u5B9A\u4E49
-menu.parent.customizing.alt=\u63A5\u53D7\u9002\u5E94OpenOLAT\u7684\u8C03\u6574
-menu.parent.maintenance=\u7CFB\u7EDF\u7EF4\u62A4
-menu.parent.maintenance.alt=\u7CFB\u7EDF\u7EF4\u62A4\u548C\u5EF6\u4F38\u8BBE\u7F6E
-menu.quota=\u914D\u989D\u7BA1\u7406
-menu.quota.alt=\u914D\u989D\u7BA1\u7406
-menu.registration=\u7CFB\u7EDF\u6CE8\u518C
-menu.registration.alt=\u8BF7\u60A8\u5728OpenOLAT.org\u6CE8\u518C\u60A8\u7684OpenOLAT\u7CFB\u7EDF
+menu.layout=\u5e03\u5c40
+menu.layout.alt=\u5728\u5168\u7cfb\u7edf\u8303\u56f4\u5185\u8c03\u6574\u5e03\u5c40
+menu.lock=\u9501\u4f4f
+menu.module=\u6a21\u5757
+menu.module.alt=\u6a21\u5757
+menu.notifications=\u901a\u77e5
+menu.notifications.alt=\u6570\u636e\u7edf\u8ba1
+menu.onlinetranslation=\u7ffb\u8bd1\u5de5\u5177
+menu.onlinetranslation.alt=\u628aOpenOLAT\u7ffb\u8bd1\u4e3a\u60a8\u7684\u6bcd\u8bed
+menu.onlinetranslation.customize=\u8bed\u8a00\u8c03\u6574\u5de5\u5177
+menu.onlinetranslation.customize.alt=\u8bf7\u60a8\u5728OpenOLAT\u5b89\u88c5\u4e2d\u4f7f\u7528\u8bed\u8a00\u8c03\u6574\u5de5\u5177\u6765\u8c03\u6574\u8bed\u8a00\u5143\u7d20
+menu.parent.customizing=\u81ea\u5b9a\u4e49
+menu.parent.customizing.alt=\u63a5\u53d7\u9002\u5e94OpenOLAT\u7684\u8c03\u6574
+menu.parent.maintenance=\u7cfb\u7edf\u7ef4\u62a4
+menu.parent.maintenance.alt=\u7cfb\u7edf\u7ef4\u62a4\u548c\u5ef6\u4f38\u8bbe\u7f6e
+menu.quota=\u914d\u989d\u7ba1\u7406
+menu.quota.alt=\u914d\u989d\u7ba1\u7406
+menu.registration=\u7cfb\u7edf\u6ce8\u518c
+menu.registration.alt=\u8bf7\u60a8\u5728OpenOLAT.org\u6ce8\u518c\u60a8\u7684OpenOLAT\u7cfb\u7edf
 menu.restapi=REST API
-menu.restapi.alt=REST API\u8BBE\u7F6E
-menu.search=\u5168\u6587\u68C0\u7D22
-menu.search.alt=\u5168\u6587\u68C0\u7D22\u7BA1\u7406
-menu.session=\u7528\u6237\u4F1A\u8BDD
-menu.session.alt=\u7528\u6237\u4F1A\u8BDD
-menu.snoop=Snoop\u7528\u6237\u8BF7\u6C42
-menu.statistics=\u6570\u636E\u7EDF\u8BA1
-menu.statistics.alt=\u65E5\u5FD7\u6587\u4EF6\u7EDF\u8BA1
-menu.sysinfo=\u7CFB\u7EDF\u4FE1\u606F
-menu.sysinfo.alt=\u7CFB\u7EDF\u4FE1\u606F
-menu.system=\u7CFB\u7EDF
-menu.system.alt=\u7CFB\u7EDF
-menu.umgmt=\u7528\u6237\u7BA1\u7406
-menu.umgmt.alt=\u7528\u6237\u7BA1\u7406
-menu.userproperties=\u7528\u6237\u5C5E\u6027
-menu.userproperties.alt=\u7528\u6237\u5C5E\u6027\u7BA1\u7406
-menu.usertools=\u7528\u6237\u5DE5\u5177
-menu.usertools.alt=\u7528\u6237\u5DE5\u5177
-menu.versions=\u7248\u672C
-menu.versions.alt=\u7248\u672C\u8BBE\u7F6E
+menu.restapi.alt=REST API\u8bbe\u7f6e
+menu.search=\u5168\u6587\u68c0\u7d22
+menu.search.alt=\u5168\u6587\u68c0\u7d22\u7ba1\u7406
+menu.session=\u7528\u6237\u4f1a\u8bdd
+menu.session.alt=\u7528\u6237\u4f1a\u8bdd
+menu.snoop=Snoop\u7528\u6237\u8bf7\u6c42
+menu.statistics=\u6570\u636e\u7edf\u8ba1
+menu.statistics.alt=\u65e5\u5fd7\u6587\u4ef6\u7edf\u8ba1
+menu.sysinfo=\u7cfb\u7edf\u4fe1\u606f
+menu.sysinfo.alt=\u7cfb\u7edf\u4fe1\u606f
+menu.system=\u7cfb\u7edf
+menu.system.alt=\u7cfb\u7edf
+menu.umgmt=\u7528\u6237\u7ba1\u7406
+menu.umgmt.alt=\u7528\u6237\u7ba1\u7406
+menu.userproperties=\u7528\u6237\u5c5e\u6027
+menu.userproperties.alt=\u7528\u6237\u5c5e\u6027\u7ba1\u7406
+menu.usertools=\u7528\u6237\u5de5\u5177
+menu.usertools.alt=\u7528\u6237\u5de5\u5177
+menu.versions=\u7248\u672c
+menu.versions.alt=\u7248\u672c\u8bbe\u7f6e
+
+
+#\u4e2d\u6587\u4e0d\u662f\u5168\u7684\uff0c \u6240\u4ee5\u8981\u4fee\u6539\u90e8\u5206\u5185\u5bb9
