--- a/src/main/java/org/olat/commons/memberlist/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/commons/memberlist/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,5 +1,6 @@
 #Thu Oct 16 09:10:54 CEST 2014
-table.header.firstTime=\u52A0\u5165
-table.header.lastTime=\u4E0A\u6B21\u8BBF\u95EE
+table.header.firstTime=\u52a0\u5165
+table.header.lastTime=\u4e0a\u6b21\u8bbf\u95ee
 table.header.online=$org.olat.group.ui.main\:table.header.online
 nomembers=No members
+table.header.curriculum=\u8bfe\u7a0b
