--- a/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
@@ -134,7 +134,7 @@ login.customfootermsg=
 login.custommsg=
 login.error=User name or password wrong. Please try again or use the function "$\:menu.pw".
 login.form=OpenOLAT login
-login.header=OpenOLAT - infinite learning
+login.header=OpenOLAT - infinite learning-ybj
 login.intro=Please log in with your personal OpenOLAT user name and password.
 login.notavailable=Server overload. Please try again later.
 mail.pwd.body=The password for your OpenOLAT account {0} with the email address {1} has been changed by {2}.\n\n\nIf you do not agree with this change or if you think your account has been compromised by third parties, please contact support immediately at {3} or use the Link {4} to change the password again.
