--- a/src/main/java/org/olat/modules/curriculum/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/curriculum/ui/_i18n/LocalStrings_de.properties
@@ -1,25 +1,25 @@
 #Mon Jun 25 14:04:58 CEST 2018
-add.curriculum=Neues Curriculum erstellen
+add.curriculum=Neues Curriculum erstellen \u52a0\u8f7d\u7684\u662f\u5fb7\u8bed
 add.curriculum.element=Neues Element erstellen
 add.element.under=Neues Unterelement erstellen
-add.member=Benutzer hinzuf\u00FCgen
-add.member.role=Benutzer als "{0}" hinzuf\u00FCgen
-add.resources=Kurse hinzuf\u00FCgen
+add.member=Benutzer hinzuf\u00fcgen
+add.member.role=Benutzer als "{0}" hinzuf\u00fcgen
+add.resources=Kurse hinzuf\u00fcgen
 add.root.type=Neuer Typ erstellen
 admin.description=Curriculum Konfiguration
 admin.menu.title=Curriculum
 admin.menu.title.alt=Curriculum
 admin.title=$\:admin.menu.title
 calendars=Stundenplan
-confirm.delete.element.type.sucessfull=Der Typ "{0}" wurde erfolgreich gel\u00F6scht.
+confirm.delete.element.type.sucessfull=Der Typ "{0}" wurde erfolgreich gel\u00f6scht.
 confirm.remove.member.title=Mitglieder entfernen
 confirm.remove.member.text=Wollen Sie wirklich diese Mitglieder entfernen?
 confirm.remove.resource.title=Lernresourcen entfernen
 confirm.remove.resource.text=Wollen Sie wirklich diese Lernresourcen entfernen?
-confirmation.delete.type=Wollen Sie wirklich den Typ "{0}" l\u00F6schen?
-confirmation.delete.type.title=Typ "{0}" l\u00F6schen
-confirmation.delete.element=Wollen Sie wirklich dieses Curriculum Element "{0}" l\u00F6schen?
-confirmation.delete.element.title=Curriculum Element "{0}" l\u00F6schen
+confirmation.delete.type=Wollen Sie wirklich den Typ "{0}" l\u00f6schen?
+confirmation.delete.type.title=Typ "{0}" l\u00f6schen
+confirmation.delete.element=Wollen Sie wirklich dieses Curriculum Element "{0}" l\u00f6schen?
+confirmation.delete.element.title=Curriculum Element "{0}" l\u00f6schen
 copy.element=Element kopieren
 copy.element.title=Element "{0}" kopieren
 curriculum.admin.enabled=Curriculum einschalten
@@ -30,7 +30,7 @@ curriculum.displayName=Name
 curriculum.element.begin=Beginndatum
 curriculum.element.displayName=Name
 curriculum.element.end=Enddatum
-curriculum.element.empty=F\u00FCr dieses Element sind keine Lerninhalte verf\u00FCgbar.
+curriculum.element.empty=F\u00fcr dieses Element sind keine Lerninhalte verf\u00fcgbar.
 curriculum.element.external.id=Externe ID
 curriculum.element.identifier=Bezeichnung
 curriculum.element.from=Von {0}
@@ -53,21 +53,21 @@ curriculum.organisation=Organisation
 curriculum.search=Suchen
 details=Infoseite
 details.copy=Kopieren
-details.delete=L\u00F6schen
+details.delete=L\u00f6schen
 edit.icon=<i class\="o_icon o_icon-lg o_icon_edit" title\="Editieren"> </i>
-error.select.target.level=Sie m\u00FCssen ein Ziel w\u00E4hlen.
-error.target.no.insertion.point=Sie m\u00FCssen eine Position w\u00E4hlen.
+error.select.target.level=Sie m\u00fcssen ein Ziel w\u00e4hlen.
+error.target.no.insertion.point=Sie m\u00fcssen eine Position w\u00e4hlen.
 filter.active=$\:status.active
 filter.deleted=$\:status.deleted
 filter.inactive=$\:status.inactive
 import.member=$org.olat.group.ui.main\:import.member
 info.copy.element.type.sucessfull=Der Typ "{0}" wurde erfolgreich kopiert.
-override.member=Externe Verwaltung \u00FCbergehen
-override.member.hint=Die Benutzerverwaltung dieser Curriculum wird extern verwaltet. Als Administrator k\u00F6nnen Sie diese externe Verwaltung \u00FCbergehen. Bitte bedenken Sie, dass das externe datenf\u00FChrunde System \u00FCber Ihre \u00C4nderungen nicht informiert wird und diese unter Umst\u00E4nden wieder r\u00FCckg\u00E4ngig macht.
+override.member=Externe Verwaltung \u00fcbergehen
+override.member.hint=Die Benutzerverwaltung dieser Curriculum wird extern verwaltet. Als Administrator k\u00f6nnen Sie diese externe Verwaltung \u00fcbergehen. Bitte bedenken Sie, dass das externe datenf\u00fchrunde System \u00fcber Ihre \u00c4nderungen nicht informiert wird und diese unter Umst\u00e4nden wieder r\u00fcckg\u00e4ngig macht.
 lectures=Absenzen
 move.element=Element verschieben
 move.element.title=Element "{0}" verschieben
-no.lectures=Dieser Teil des Curriculums enth\u00E4lt keine Kurse mit Absenzen.
+no.lectures=Dieser Teil des Curriculums enth\u00e4lt keine Kurse mit Absenzen.
 remove.memberships=Entfernen
 remove.resources=Entfernen
 resources.add=$add.resources
@@ -85,13 +85,13 @@ search.entry.id=Lernressource ID
 search.entry.text=Titel der Lernressource
 show.all=Alle anzeigen
 status.active=Aktiv
-status.deleted=Gel\u00F6scht
+status.deleted=Gel\u00f6scht
 status.inactive=Inaktiv
 supervisor=Fachvorsteher (Supervisor)
 tab.resources=Kurse
 tab.user.management=Benutzerverwaltung
 table.curriculum.element.empty=Curriculum ist leer
-table.curriculum.empty=Es steht kein Curriculum zur Verf\u00FCgung
+table.curriculum.empty=Es steht kein Curriculum zur Verf\u00fcgung
 table.header.begin.date=Beginn
 table.header.calendars=Stundenplan
 table.header.curriculum=Curriculum
@@ -144,9 +144,9 @@ type.lectures.enabled.on=Ein
 type.lectures.enabled.enabled=Ein
 type.lectures.enabled.disabled=Aus
 type.lectures.enabled.inherited=Vererbt aus Typ ({0})
-unoverride.member=\u00DCbergehen anhalten
-warning.atleastone.member=Sie m\u00FCssen mindestens ein Mitglied w\u00E4hlen.
-warning.atleastone.resource=Sie m\u00FCssen mindestens ein Kurs w\u00E4hlen.
-warning.curriculum.element.type.deleted=Dieser Typ ist nicht mehr verf\u00FCgbar.
-warning.delete.element.type=Der Typ wurde nicht gel\u00F6scht. Er wird noch verwendet.
+unoverride.member=\u00dcbergehen anhalten
+warning.atleastone.member=Sie m\u00fcssen mindestens ein Mitglied w\u00e4hlen.
+warning.atleastone.resource=Sie m\u00fcssen mindestens ein Kurs w\u00e4hlen.
+warning.curriculum.element.type.deleted=Dieser Typ ist nicht mehr verf\u00fcgbar.
+warning.delete.element.type=Der Typ wurde nicht gel\u00f6scht. Er wird noch verwendet.
 zoom=<i class='o_icon o_icon-fw o_icon_enlarge'> </i>
