--- a/src/main/java/org/olat/login/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_zh_CN.properties
@@ -1,15 +1,18 @@
 #Wed Nov 04 22:07:24 CET 2015
-about.linktext=\u60A8\u53EF\u4EE5\u5728<a href\="http\://www.openolat.org" target\="_blank"><i class\="o_icon o_icon_link_extern"> </i> www.openolat.org</a>\u83B7\u5F97\u66F4\u591A\u4FE1\u606F\u6216\u90AE\u4EF6\u8868
-about.title=\u5173\u4E8EOLAT
-about.translate=\u591A\u56FD\u8BED\u8A00
-about.version=\u7248\u672C
-accessibility.accesskeys=\u4F7F\u7528\u8BBF\u95EE\u952E\u53EF\u4EE5\u5728\u7CFB\u7EDF\u5185\u8DF3\u5230\u91CD\u8981\u7684\u5143\u7D20\u3002\u6309\u4E0BCTRL\u6216ATL\u5C31\u53EF\u4EE5\u8BBF\u95EE\u5173\u952E\u5143\u7D20\uFF0C\u8FD9\u53D6\u51B3\u4E8E\u60A8\u7684\u64CD\u4F5C\u7CFB\u7EDF\u3002\u4F8B\u5982\uFF0C\u540C\u65F6\u6309\u4E0BCTRL\u952E\u548CR\u952E\u60A8\u5C31\u53EF\u4EE5\u8FC5\u901F\u8BBF\u95EE\u5B66\u4E60\u8D44\u6E90\u3002\u4E0B\u9762\u7684\u5217\u8868\u4F1A\u7ED9\u60A8\u5C55\u793A\u6240\u6709\u53EF\u7528\u7684\u5FEB\u6377\u952E\uFF1A
-accessibility.fontsize.1=OLAT\u4E2D\u7684\u5B57\u4F53\u5927\u5C0F\u4E0D\u662F\u7EDD\u5BF9\u4E0D\u53D8\u7684\u3002
-accessibility.fontsize.2=\u60A8\u53EF\u4EE5\u6839\u636E\u60A8\u7684\u6D4F\u89C8\u5668\u7684\u9700\u8981\u6765\u8C03\u6574\u5B57\u4F53\u7684\u5927\u5C0F\u3002
-accessibility.fontsize.change=\u60A8\u4E5F\u53EF\u4EE5\u5728OLAT\u4E2D\u8C03\u6574\u60A8\u7684\u6807\u51C6\u5B57\u4F53\u5927\u5C0F\u3002\u5F53\u9009\u62E9\u83DC\u5355\u6761\u76EE"\u663E\u793A"\u65F6\uFF0C\u60A8\u4F1A\u5728\u9996\u9875\u533A\u57DF\u53D1\u73B0\u8FD9\u4E2A\u914D\u7F6E\u3002
-accessibility.fontsize.title=\u5B57\u4F53\u5927\u5C0F
-accessibility.intro=\u5BF9\u4E8E\u5F31\u89C6\u7684\u4EBA\uFF0COLAT\u4E3A\u5176\u63D0\u4F9B\u4E86\u4F18\u5316\u7684\u652F\u6301\u3002
-accessibility.title=OLAT\u4E0E\u53EF\u8BBF\u95EE\u6027
+timeout.title=\u4f1a\u8bdd\u8d85\u65f6
+timeout.message=\u60a8\u7684\u4f1a\u8bdd\u5df2\u8d85\u65f6\u6216\u670d\u52a1\u5668\u5df2\u91cd\u65b0\u542f\u52a8\u3002\u518d\u6b21\u767b\u5f55\u8bf7\u4f7f\u7528\u6b64\u94fe\u63a5<b><a href\='reload.html'>link</a></b>\u6216\u91cd\u8f7d\u9875\u9762<br><br>\u8bf7\u6ce8\u610f\uff0c\u6240\u6709\u672a\u4fdd\u5b58\u5728\u6d4f\u89c8\u5668\u7a97\u53e3\u7684\u66f4\u6539\u5c06\u5728\u767b\u5f55\u8fc7\u7a0b\u4e2d\u4e22\u5931\u3002\u5173\u95ed\u6b64\u5bf9\u8bdd\u6846\u6765\u624b\u52a8\u5c06\u672a\u4fdd\u5b58\u7684\u5185\u5bb9(\u5982\u8bba\u575b\u5e16\u5b50)\u590d\u5236\u5230\u6d4f\u89c8\u5668\u526a\u8d34\u677f\uff0c\u5e76\u624b\u52a8\u91cd\u65b0\u52a0\u8f7d\u9875\u9762\u3002
+
+about.linktext=\u60a8\u53ef\u4ee5\u5728<a href\="http\://www.openolat.org" target\="_blank"><i class\="o_icon o_icon_link_extern"> </i> www.openolat.org</a>\u83b7\u5f97\u66f4\u591a\u4fe1\u606f\u6216\u90ae\u4ef6\u8868
+about.title=\u5173\u4e8eOLAT
+about.translate=\u591a\u56fd\u8bed\u8a00
+about.version=\u7248\u672c
+accessibility.accesskeys=\u4f7f\u7528\u8bbf\u95ee\u952e\u53ef\u4ee5\u5728\u7cfb\u7edf\u5185\u8df3\u5230\u91cd\u8981\u7684\u5143\u7d20\u3002\u6309\u4e0bCTRL\u6216ATL\u5c31\u53ef\u4ee5\u8bbf\u95ee\u5173\u952e\u5143\u7d20\uff0c\u8fd9\u53d6\u51b3\u4e8e\u60a8\u7684\u64cd\u4f5c\u7cfb\u7edf\u3002\u4f8b\u5982\uff0c\u540c\u65f6\u6309\u4e0bCTRL\u952e\u548cR\u952e\u60a8\u5c31\u53ef\u4ee5\u8fc5\u901f\u8bbf\u95ee\u5b66\u4e60\u8d44\u6e90\u3002\u4e0b\u9762\u7684\u5217\u8868\u4f1a\u7ed9\u60a8\u5c55\u793a\u6240\u6709\u53ef\u7528\u7684\u5feb\u6377\u952e\uff1a
+accessibility.fontsize.1=OLAT\u4e2d\u7684\u5b57\u4f53\u5927\u5c0f\u4e0d\u662f\u7edd\u5bf9\u4e0d\u53d8\u7684\u3002
+accessibility.fontsize.2=\u60a8\u53ef\u4ee5\u6839\u636e\u60a8\u7684\u6d4f\u89c8\u5668\u7684\u9700\u8981\u6765\u8c03\u6574\u5b57\u4f53\u7684\u5927\u5c0f\u3002
+accessibility.fontsize.change=\u60a8\u4e5f\u53ef\u4ee5\u5728OLAT\u4e2d\u8c03\u6574\u60a8\u7684\u6807\u51c6\u5b57\u4f53\u5927\u5c0f\u3002\u5f53\u9009\u62e9\u83dc\u5355\u6761\u76ee"\u663e\u793a"\u65f6\uff0c\u60a8\u4f1a\u5728\u9996\u9875\u533a\u57df\u53d1\u73b0\u8fd9\u4e2a\u914d\u7f6e\u3002
+accessibility.fontsize.title=\u5b57\u4f53\u5927\u5c0f
+accessibility.intro=\u5bf9\u4e8e\u5f31\u89c6\u7684\u4eba\uff0cOLAT\u4e3a\u5176\u63d0\u4f9b\u4e86\u4f18\u5316\u7684\u652f\u6301\u3002
+accessibility.title=OLAT\u4e0e\u53ef\u8bbf\u95ee\u6027
 accesskey.back=$org.olat.core.commons.fullWebApp\:accesskey.back
 accesskey.changes=$org.olat.core.commons.fullWebApp\:accesskey.changes
 accesskey.content=$org.olat.core.commons.fullWebApp\:accesskey.content
@@ -23,32 +26,32 @@ accesskey.title=$org.olat.core.commons.fullWebApp\:accesskey.title
 accesskey.tools=$org.olat.core.commons.fullWebApp\:accesskey.tools
 accesskey.top=$org.olat.core.commons.fullWebApp\:accesskey.top
 accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
-browsercheck.bestresults.newerversion=\u6216\u8005\u8F83\u65B0\u7684\u7248\u672C
-browsercheck.bestresults.recommended=(\u63A8\u8350)
-browsercheck.bestresults.title=\u6700\u597D\u4F7F\u7528\u4EE5\u4E0B\u6D4F\u89C8\u5668\u4E4B\u4E00\uFF1A
-browsercheck.comfortfunctions.ajax=AJAX \u8F6C\u6362\u6A21\u5F0F\uFF0C\u63D0\u4F9B\u66F4\u5FEB\u7684\u9875\u9762\u53CD\u5E94\u901F\u5EA6\uFF1A
-browsercheck.comfortfunctions.datechooser=\u652F\u6301\u65E5\u671F\u9009\u62E9\uFF1A
-browsercheck.comfortfunctions.form=\u652F\u6301Form input\uFF1A
-browsercheck.comfortfunctions.htmleditor=WYSIWYG HTML \u7F16\u8F91\u5668\uFF1A
-browsercheck.comfortfunctions.learningarea=\u5728\u5B66\u7A0B\u7F16\u8F91\u5668\u4E2D\u9009\u62E9\u5B66\u4E60\u533A\u57DF\uFF1A
-browsercheck.comfortfunctions.learninggroup=\u5728\u5B66\u7A0B\u7F16\u8F91\u5668\u4E2D\u9009\u62E9\u5B66\u4E60\u7FA4\u7EC4
-browsercheck.comfortfunctions.title=OLAT\u53EF\u7528\u7684\u8212\u9002\u7279\u6027\uFF1A
-browsercheck.minimum.first=\u60A8\u7684\u6D4F\u89C8\u5668\u5FC5\u987B\u5F00\u542F\u652F\u6301cookies\u3002
-browsercheck.minimum.second=\u5FC5\u987B\u652F\u6301Javascript\u3002
-browsercheck.minimum.title=OLAT\u6700\u5C0F\u914D\u7F6E\u9700\u6C42
+browsercheck.bestresults.newerversion=\u6216\u8005\u8f83\u65b0\u7684\u7248\u672c
+browsercheck.bestresults.recommended=(\u63a8\u8350)
+browsercheck.bestresults.title=\u6700\u597d\u4f7f\u7528\u4ee5\u4e0b\u6d4f\u89c8\u5668\u4e4b\u4e00\uff1a
+browsercheck.comfortfunctions.ajax=AJAX \u8f6c\u6362\u6a21\u5f0f\uff0c\u63d0\u4f9b\u66f4\u5feb\u7684\u9875\u9762\u53cd\u5e94\u901f\u5ea6\uff1a
+browsercheck.comfortfunctions.datechooser=\u652f\u6301\u65e5\u671f\u9009\u62e9\uff1a
+browsercheck.comfortfunctions.form=\u652f\u6301Form input\uff1a
+browsercheck.comfortfunctions.htmleditor=WYSIWYG HTML \u7f16\u8f91\u5668\uff1a
+browsercheck.comfortfunctions.learningarea=\u5728\u5b66\u7a0b\u7f16\u8f91\u5668\u4e2d\u9009\u62e9\u5b66\u4e60\u533a\u57df\uff1a
+browsercheck.comfortfunctions.learninggroup=\u5728\u5b66\u7a0b\u7f16\u8f91\u5668\u4e2d\u9009\u62e9\u5b66\u4e60\u7fa4\u7ec4
+browsercheck.comfortfunctions.title=OLAT\u53ef\u7528\u7684\u8212\u9002\u7279\u6027\uff1a
+browsercheck.minimum.first=\u60a8\u7684\u6d4f\u89c8\u5668\u5fc5\u987b\u5f00\u542f\u652f\u6301cookies\u3002
+browsercheck.minimum.second=\u5fc5\u987b\u652f\u6301Javascript\u3002
+browsercheck.minimum.title=OLAT\u6700\u5c0f\u914d\u7f6e\u9700\u6c42
 browsercheck.no=\u5426
-browsercheck.osx=\u60A8\u5E94\u8BE5\u5728MacOSX\u7CFB\u7EDF\u4E2D\u4F7F\u7528Safari\u6216\u8005Firefox\u3002
-browsercheck.title=\u652F\u6301\u7684\u6D4F\u89C8\u5668
-browsercheck.yes=\u662F
-browsercheck.yourbrowser.codename=\u6D4F\u89C8\u5668\u7F16\u7801\uFF1A
-browsercheck.yourbrowser.cookies=\u8BA4\u53EF\u7684cookies\:
-browsercheck.yourbrowser.generation=\u6D4F\u89C8\u5668\u4EE3\u522B\uFF1A
-browsercheck.yourbrowser.js=Javascript\u53EF\u7528
-browsercheck.yourbrowser.language=\u6D4F\u89C8\u5668\u8BED\u8A00\uFF1A
-browsercheck.yourbrowser.name=\u6D4F\u89C8\u5668\uFF1A
-browsercheck.yourbrowser.os=\u64CD\u4F5C\u7CFB\u7EDF\uFF1A
-browsercheck.yourbrowser.title=\u4F60\u6B63\u5728\u4F7F\u7528\u4EE5\u4E0B\u6D4F\u89C8\u5668\uFF1A
-browsercheck.yourbrowser.usragent=\u7528\u6237\u4EE3\u7406\uFF1A
+browsercheck.osx=\u60a8\u5e94\u8be5\u5728MacOSX\u7cfb\u7edf\u4e2d\u4f7f\u7528Safari\u6216\u8005Firefox\u3002
+browsercheck.title=\u652f\u6301\u7684\u6d4f\u89c8\u5668
+browsercheck.yes=\u662f
+browsercheck.yourbrowser.codename=\u6d4f\u89c8\u5668\u7f16\u7801\uff1a
+browsercheck.yourbrowser.cookies=\u8ba4\u53ef\u7684cookies\:
+browsercheck.yourbrowser.generation=\u6d4f\u89c8\u5668\u4ee3\u522b\uff1a
+browsercheck.yourbrowser.js=Javascript\u53ef\u7528
+browsercheck.yourbrowser.language=\u6d4f\u89c8\u5668\u8bed\u8a00\uff1a
+browsercheck.yourbrowser.name=\u6d4f\u89c8\u5668\uff1a
+browsercheck.yourbrowser.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a
+browsercheck.yourbrowser.title=\u4f60\u6b63\u5728\u4f7f\u7528\u4ee5\u4e0b\u6d4f\u89c8\u5668\uff1a
+browsercheck.yourbrowser.usragent=\u7528\u6237\u4ee3\u7406\uff1a
 
 
 
@@ -58,37 +61,37 @@ browsercheck.yourbrowser.usragent=\u7528\u6237\u4EE3\u7406\uFF1A
 
 
 
-default.shib.intro=\u60A8\u5C06\u88AB\u5F15\u5BFC\u81F3\u8BA4\u8BC1\u754C\u9762\u3002
-lf.error.loginempty=\u8BF7\u8F93\u5165\u7528\u6237\u540D
-lf.error.passempty=\u8BF7\u8F93\u5165\u5BC6\u7801
-lf.login=OLAT\u7528\u6237\u540D
-lf.pass=OLAT\u5BC6\u7801
-login.altprovider=\u5176\u5B83\u767B\u5F55\u65B9\u5F0F
-login.blocked=<b>\u8BE5\u7528\u6237\u5DF2\u88AB\u9501\u5B9A.</b><p><font size\="-1">\u5C1D\u8BD5\u767B\u5F55\u5931\u8D25\u6B21\u6570\u8FC7\u591A\u3002\u51FA\u4E8E\u5B89\u5168\uFF0C\u5BF9\u5F53\u524D\u7528\u6237\u7684\u9501\u5B9A\u5C06\u5728 {0} minutes\u540E\u89E3\u9664\u3002</p></font>
-login.browserswitch=\u60A8\u7684\u6D4F\u89C8\u5668\u4E0D\u652F\u6301OLAT\u6240\u6709\u7684\u7279\u6027\u3002\u6211\u4EEC\u63A8\u8350\u7684\u6700\u4F73\u89E3\u51B3\u65B9\u6848\u662F\u4F7F\u7528 Internet Explorer 7\u6D4F\u89C8\u5668\uFF08\u6216\u66F4\u65B0\u7248\u672C\u7684\u6D4F\u89C8\u5668\uFF09\u6216\u8005 \u706B\u72D0\u6D4F\u89C8\u5668<a href\="http\://www.mozilla-europe.org/en/products/firefox/">Mozilla Firefox 2 (or newer version).</a>
-login.button=\u767B \u5F55
-login.error=<b>OLAT\u7528\u6237\u540D\u6216\u5BC6\u7801\u6709\u8BEF.</b><p>\u53EF\u80FD\u662F\u56E0\u4E3A\uFF1A<ul><li><b>\u8F93\u5165\u9519\u8BEF\uFF1A</b><br>\u8BF7\u91CD\u65B0\u8F93\u5165<li><b>\u9519\u8BEF\u7684\u7528\u6237\u540D\u6216\u5BC6\u7801</b><br>\u5982\u679C\u8FD9\u662F\u7B2C\u4E00\u6B21\u4F7F\u7528OLAT\uFF0C\u4F60\u5FC5\u987B\u901A\u8FC7\u4F60\u6240\u5728\u5927\u5B66\u6216\u8005\u8054\u7CFB {0} \u6765\u83B7\u5F97\u8BBF\u95EE\u6743\u9650\u3002</ul></p>
-login.form=OLAT \u767B\u5165
+default.shib.intro=\u60a8\u5c06\u88ab\u5f15\u5bfc\u81f3\u8ba4\u8bc1\u754c\u9762\u3002
+lf.error.loginempty=\u8bf7\u8f93\u5165\u7528\u6237\u540d
+lf.error.passempty=\u8bf7\u8f93\u5165\u5bc6\u7801
+lf.login=OLAT\u7528\u6237\u540d
+lf.pass=OLAT\u5bc6\u7801
+login.altprovider=\u5176\u5b83\u767b\u5f55\u65b9\u5f0f
+login.blocked=<b>\u8be5\u7528\u6237\u5df2\u88ab\u9501\u5b9a.</b><p><font size\="-1">\u5c1d\u8bd5\u767b\u5f55\u5931\u8d25\u6b21\u6570\u8fc7\u591a\u3002\u51fa\u4e8e\u5b89\u5168\uff0c\u5bf9\u5f53\u524d\u7528\u6237\u7684\u9501\u5b9a\u5c06\u5728 {0} minutes\u540e\u89e3\u9664\u3002</p></font>
+login.browserswitch=\u60a8\u7684\u6d4f\u89c8\u5668\u4e0d\u652f\u6301OLAT\u6240\u6709\u7684\u7279\u6027\u3002\u6211\u4eec\u63a8\u8350\u7684\u6700\u4f73\u89e3\u51b3\u65b9\u6848\u662f\u4f7f\u7528 Internet Explorer 7\u6d4f\u89c8\u5668\uff08\u6216\u66f4\u65b0\u7248\u672c\u7684\u6d4f\u89c8\u5668\uff09\u6216\u8005 \u706b\u72d0\u6d4f\u89c8\u5668<a href\="http\://www.mozilla-europe.org/en/products/firefox/">Mozilla Firefox 2 (or newer version).</a>
+login.button=\u767b \u5f55
+login.error=<b>OLAT\u7528\u6237\u540d\u6216\u5bc6\u7801\u6709\u8bef.</b><p>\u53ef\u80fd\u662f\u56e0\u4e3a\uff1a<ul><li><b>\u8f93\u5165\u9519\u8bef\uff1a</b><br>\u8bf7\u91cd\u65b0\u8f93\u5165<li><b>\u9519\u8bef\u7684\u7528\u6237\u540d\u6216\u5bc6\u7801</b><br>\u5982\u679c\u8fd9\u662f\u7b2c\u4e00\u6b21\u4f7f\u7528OLAT\uff0c\u4f60\u5fc5\u987b\u901a\u8fc7\u4f60\u6240\u5728\u5927\u5b66\u6216\u8005\u8054\u7cfb {0} \u6765\u83b7\u5f97\u8bbf\u95ee\u6743\u9650\u3002</ul></p>
+login.form=OLAT \u767b\u5165
 login.header=OpenOLAT - infinite learning
-login.intro=\u8BF7\u8F93\u5165\u4F60\u7684OLAT\u7528\u6237\u540D\u548C\u5BC6\u7801
-login.notavailable=\u670D\u52A1\u5668\u8D85\u65F6\u3002\u8BF7\u7A0D\u540E\u91CD\u8BD5\uFF01
-menu.about=\u5173\u4E8EOLAT
-menu.about.alt=OLAT\u4FE1\u606F
-menu.guest=\u6E38  \u5BA2
-menu.guest.alt=\u4EE5\u6E38\u5BA2\u8EAB\u4EFD\u8FDB\u5165
-menu.login=\u767B  \u5F55
-menu.login.alt=\u8FDB\u5165\u5B66\u4E60OLAT
-menu.pw=\u5FD8\u8BB0\u5BC6\u7801\uFF1F
-menu.register=\u6CE8  \u518C
-menu.register.alt=\u521B\u5EFA\u4F60\u7684OLAT\u8D26\u6237
+login.intro=\u8bf7\u8f93\u5165\u4f60\u7684OLAT\u7528\u6237\u540d\u548c\u5bc6\u7801
+login.notavailable=\u670d\u52a1\u5668\u8d85\u65f6\u3002\u8bf7\u7a0d\u540e\u91cd\u8bd5\uff01
+menu.about=\u5173\u4e8eOLAT
+menu.about.alt=OLAT\u4fe1\u606f
+menu.guest=\u6e38  \u5ba2
+menu.guest.alt=\u4ee5\u6e38\u5ba2\u8eab\u4efd\u8fdb\u5165
+menu.login=\u767b  \u5f55
+menu.login.alt=\u8fdb\u5165\u5b66\u4e60OLAT
+menu.pw=\u5fd8\u8bb0\u5bc6\u7801\uff1f
+menu.register=\u6ce8  \u518c
+menu.register.alt=\u521b\u5efa\u4f60\u7684OLAT\u8d26\u6237
 menu.root=OLAT
 menu.root.alt=infinite learning
-runonce.forced=\u8BF7\u586B\u5199\u6B64\u8868\u5355\u5E76\u4FDD\u5B58\u60A8\u7684\u8BBE\u7F6E\u3002
-runonce.title=\u5F53\u60A8\u7B2C\u4E00\u6B21\u767B\u5165\u7684\u65F6\u5019\uFF0C\u56DE\u5230 \u4FEE\u8BA2/\u8BBE\u7F6E \u754C\u9762\u3002
-shib.redirect=\u767B\u5165\u53E3\u4EE4
-topnav.help=\u5E2E\u52A9
-topnav.help.alt=\u542F\u52A8 OLAT\u5E2E\u52A9
-wayf.homesite=\u5927\u5B66
-wayf.intro=\u8BF7\u9009\u62E9\u4F60\u6240\u5728\u7684\u5927\u5B66<br><br> \u4F60\u5C06\u88AB\u91CD\u5B9A\u5411
-wayf.pleasechoose=\u8BF7\u9009\u62E9\u4F60\u7684\u5927\u5B66\u2026\u2026
-wayf.submit=\u767B \u5F55
+runonce.forced=\u8bf7\u586b\u5199\u6b64\u8868\u5355\u5e76\u4fdd\u5b58\u60a8\u7684\u8bbe\u7f6e\u3002
+runonce.title=\u5f53\u60a8\u7b2c\u4e00\u6b21\u767b\u5165\u7684\u65f6\u5019\uff0c\u56de\u5230 \u4fee\u8ba2/\u8bbe\u7f6e \u754c\u9762\u3002
+shib.redirect=\u767b\u5165\u53e3\u4ee4
+topnav.help=\u5e2e\u52a9
+topnav.help.alt=\u542f\u52a8 OLAT\u5e2e\u52a9
+wayf.homesite=\u5927\u5b66
+wayf.intro=\u8bf7\u9009\u62e9\u4f60\u6240\u5728\u7684\u5927\u5b66<br><br> \u4f60\u5c06\u88ab\u91cd\u5b9a\u5411
+wayf.pleasechoose=\u8bf7\u9009\u62e9\u4f60\u7684\u5927\u5b66\u2026\u2026
+wayf.submit=\u767b \u5f55
