--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,22 @@
 #Sun Mar 19 10:15:41 CET 2017
+cif.owned.resources.usage.all=\u5168\u90e8
+cif.resources.status.all=\u5168\u90e8
+status.opened=\u53ef\u7528
+change.to.close=\u5df2\u7ed3\u675f
+search.courses.closed=\u5df2\u7ed3\u675f
+status.closed=\u5df2\u7ed3\u675f
+cmd.import.ressource.desc=\u9009\u62e9\u4e00\u4e2a\u5b66\u4e60\u8d44\u6e90\u5bfc\u5165\:<ul><li>OpenOLAT\u683c\u5f0f\: \u8bfe\u7a0b\uff0c\u8d44\u6e90\u6587\u4ef6\u5939\uff0c\u672f\u8bed\u8868\uff0c\u7ef4\u57fa\uff0c\u64ad\u5ba2\uff0c\u535a\u5ba2\uff0c\u89c6\u9891\u7ec4\u5408\uff0c\u6a21\u677f</li><li>MP4</li><li>\u6807\u51c6\u683c\u5f0f\:  IMS\u5185\u5bb9\u5305\u88c5\u3001IMS QTI\u8bc4\u4f30\u6216\u8c03\u67e5\uff0cSCORM 1.2</li><li>\u6587\u4ef6\: \u4efb\u610f</li></ul> 
+import.file=\u5bfc\u5165\u6587\u4ef6
+cmd.import.ressource.url.desc=\u8f93\u5165\u4e00\u4e2aURL\u6765\u5bfc\u5165\:<ul><li>\u89c6\u9891\: MP4\u3001Youtube\u3001Vimeo\u3001Panopto </li><li> Blog\u6216Podcast</li></ul>
+bulk.update.nothing.selected=\u60a8\u9700\u8981\u9009\u62e9\u81f3\u5c11\u4e00\u79cd\u5b66\u4e60\u8d44\u6e90\u3002
+tools.restore=\u6062\u590d
+tools.delete.permanently=\u6c38\u4e45\u5220\u9664
+tools.send.mail=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6
+cif.resources.status.closed=$\:status.closed
+
+
+
+
 CourseModule=\u5b66\u7a0b
 EPStructuredMapTemplate=\u6863\u6848\u6a21\u677f
 Failed=\u6587\u4ef6\u4f20\u8f93\u5931\u8d25
@@ -298,8 +316,10 @@ sf.notconfigured=\u65e0\u9009\u4e2d\u7684\u8d44\u6e90\u6587\u4ef6\u5939
 sf.resourcetitle=\u9009\u4e2d\u7684\u8d44\u6e90\u6587\u4ef6\u5939
 start=\u5f00\u59cb
 start.with.type={0}\u5f00\u59cb
-status.closed=\u7ed3\u675f\uff08\u7ed3\u675f\uff09
-status.opened=\u6d3b\u8dc3\uff08\u6253\u5f00\uff09
+
+cif.resources.status.active=$\:status.opened
+
+
 tab.accesscontrol=\u5165\u53e3\u63a7\u5236
 tab.calendar=\u65e5\u5386
 tab.chat=\u8bfe\u7a0b\u804a\u5929
