--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,44 @@
 #Sun Mar 19 10:15:41 CET 2017
+lifecycle.validTo=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
+table.header.lifecycle.end=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
+cif.externalref=\u53c2\u8003
+cif.objectives=\u76ee\u6807
+cif.requirements=\u9700\u6c42
+cif.credits=\u8ba4\u8bc1
+
+
+
+
+cif.error.corrupted=\u6b64\u5b66\u4e60\u8d44\u6e90\u5df2\u635f\u574f\uff0c\u65e0\u6cd5\u663e\u793a\u3002\u8bf7\u8054\u7cfb\u60a8\u7684\u652f\u6301\u4eba\u5458\u6216\u4f7f\u7528delete\u94fe\u63a5\u4ece\u7cfb\u7edf\u4e2d\u5220\u9664\u6b64\u8d44\u6e90\u3002
+cif.status.preparation=\u51c6\u5907
+details.label.status=\u72b6\u6001
+table.header.access=\u72b6\u6001
+cif.status.review=\u590d\u4e60
+cif.status.coachpublished=Access for coach
+cif.status.published=\u5df2\u53d1\u5e03
+status.closed=\u5df2\u7ed3\u675f
+change.to.close=\u5df2\u7ed3\u675f
+search.courses.closed=\u5df2\u7ed3\u675f
+cif.resources.status.closed=$\:status.closed
+details.close.ressoure.desc.4=\u8be5\u8bfe\u7a0b\u53ef\u4ee5\u5728\u201c\u5df2\u5b8c\u6210\u201d\u9009\u9879\u5361\u4e0b\u7684\u8bfe\u7a0b\u4e2d\u627e\u5230\u3002
+
+
+
+
+details.copy.confirm=\u60a8\u60f3\u590d\u5236\u8fd9\u4e2a\u5b66\u4e60\u8d44\u6e90\u5417?   {0}
+details.delete.entries=\u5b66\u4e60\u8d44\u6e90
+details.delete.acknowledge=\u786e\u8ba4
+details.notifications.acknowledge=\u7535\u5b50\u90ae\u4ef6\u901a\u77e5
+access.info.role.owner=\u6240\u6709\u8005
+details.notifications.acknowledge.value=\u6240\u6709\u8005
+details.delete.soft.acknowledge.msg=\u5b66\u4e60\u8d44\u6e90\u5c06\u88ab\u6807\u8bb0\u4e3a\u5df2\u5220\u9664\u3002
+contact.to.participant=\u5168\u4f53\u5b66\u5458
+contact.to.coach=\u5168\u4f53\u6559\u5458
+contact.to.owner=\u5168\u4f53\u8bfe\u7a0b\u6240\u6709\u8005
+
+
+
+
 cif.owned.resources.usage.all=\u5168\u90e8
 cif.resources.status.all=\u5168\u90e8
 status.opened=\u53ef\u7528
@@ -12,7 +52,7 @@ bulk.update.nothing.selected=\u60a8\u9700\u8981\u9009\u62e9\u81f3\u5c11\u4e00\u7
 tools.restore=\u6062\u590d
 tools.delete.permanently=\u6c38\u4e45\u5220\u9664
 tools.send.mail=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6
-cif.resources.status.closed=$\:status.closed
+
 
 
 
@@ -292,7 +332,7 @@ search.cp=CP\u8bfe\u4ef6
 search.deleted=\u5df2\u5220\u9664
 search.filter.showAll=\u5c55\u793a\u5168\u90e8
 search.filter.type=\u7c7b\u578b
-search.generic=\u641c\u7d22\u63a9\u7801
+search.generic=\u641c\u7d22\u8868\u5355
 search.glossary=\u672f\u8bed\u8bcd\u6c47\u8868
 search.home=\u5b66\u4e60\u8d44\u6e90
 search.id.format=\u4ec5\u5141\u8bb8\u6570\u5b57
