--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_de.properties
@@ -1,35 +1,35 @@
 #Mon Mar 02 09:54:04 CET 2009
-at.least.one.recipient=Sie m\u00FCssen mindestens ein Empf\u00E4nger w\u00E4hlen.
+at.least.one.recipient=Sie m\u00fcssen mindestens ein Empf\u00e4nger w\u00e4hlen.
 
 
 
 
-error.too.long=Die Vorlage ist zu gross. Maximale Gr\u00F6sse ist {0}\!
+error.too.long=Die Vorlage ist zu gross. Maximale Gr\u00f6sse ist {0}\!
 recipients.all=Alle anzeigen
 recipients.hide=Weniger anzeigen
-recipients.more=... und {0} weitere Empf\u00E4nger
+recipients.more=... und {0} weitere Empf\u00e4nger
 
 
 
 
 contact.cp.from = Kopie an Absender
-add.email=Hinzuf\u00FCgen
+add.email=Hinzuf\u00fcgen
 footer.no.userdata=<p>Diese Nachricht wurde automatisch von der Lernplattform OpenOLAT versandt: <a href="{0}">{0}</a></p>
-footer.with.userdata=<p>Absender: {2} {3} ({0}), {4} {5}</p><p>Diese Nachricht wurde \u00FCber die Lernplattform OpenOLAT versandt: <a href="{1}">{1}</a></p>
+footer.with.userdata=<p>Absender: {2} {3} ({0}), {4} {5}</p><p>Diese Nachricht wurde \u00fcber die Lernplattform OpenOLAT versandt: <a href="{1}">{1}</a></p>
 
-mailhelper.error.attachment=Die E-Mail konnte nicht verschickt werden\: ung\u00FCltiges Attachment. Bitte benachrichtigen Sie die Empf\u00E4nger manuell. 
+mailhelper.error.attachment=Die E-Mail konnte nicht verschickt werden\: ung\u00fcltiges Attachment. Bitte benachrichtigen Sie die Empf\u00e4nger manuell. 
 mailhelper.error.failedadresses=Diese Email Adresses konnte inval sein:
-mailhelper.error.failedusers=Den folgenden Benutzern kann Ihre Nachricht nicht zugestellt werden. Bitte benachrichtigen Sie diese Benutzer manuell und bitten Sie diese, ihre E-Mail-Adresse zu \u00FCberpr\u00FCfen\:
-mailhelper.error.failedusers.title = Gesperrte Empf\u00E4nger-Adressen
+mailhelper.error.failedusers=Den folgenden Benutzern kann Ihre Nachricht nicht zugestellt werden. Bitte benachrichtigen Sie diese Benutzer manuell und bitten Sie diese, ihre E-Mail-Adresse zu \u00fcberpr\u00fcfen\:
+mailhelper.error.failedusers.title = Gesperrte Empf\u00e4nger-Adressen
 mailhelper.error.failedusers.user = {0} {1} mit Mailadresse {2} und Login {3}
 mailhelper.error.undefined.smtp=Der SMTP-Server ist nicht konfiguriert.
-mailhelper.error.recipient.address=Die E-Mail konnte nicht verschickt werden\: ung\u00FCltige Empf\u00E4ngeradresse. Bitte benachrichtigen Sie die Empf\u00E4nger manuell. 
-mailhelper.error.send.general=Die E-Mail konnte aus unbekannten Problemen nicht verschickt werden. Bitte benachrichtigen Sie die Empf\u00E4nger manuell. 
-mailhelper.error.sender.address=Die E-Mail konnte nicht verschickt werden\: ung\u00FCltige Absenderadresse. Bitte benachrichtigen Sie die Empf\u00E4nger manuell. 
-mailhelper.error.template.general=Die E-Mail konnte nicht verschickt werden\: allgemeiner Fehler im Mailtext. Bitte benachrichtigen Sie die Empf\u00E4nger manuell. 
-mailhelper.error.template.parse=Die E-Mail konnte nicht verschickt werden\: Parsefehler im Mailtext. Bitte benachrichtigen Sie die Empf\u00E4nger manuell.
-mailhelper.error.addressinvalid=Eine oder mehrere Adressen sind ung\u00FCltig: {0}
-mailhelper.error.single.addressinvalid=Die Adressen ist ung\u00FCltig.
+mailhelper.error.recipient.address=Die E-Mail konnte nicht verschickt werden\: ung\u00fcltige Empf\u00e4ngeradresse. Bitte benachrichtigen Sie die Empf\u00e4nger manuell. 
+mailhelper.error.send.general=Die E-Mail konnte aus unbekannten Problemen nicht verschickt werden. Bitte benachrichtigen Sie die Empf\u00e4nger manuell. 
+mailhelper.error.sender.address=Die E-Mail konnte nicht verschickt werden\: ung\u00fcltige Absenderadresse. Bitte benachrichtigen Sie die Empf\u00e4nger manuell. 
+mailhelper.error.template.general=Die E-Mail konnte nicht verschickt werden\: allgemeiner Fehler im Mailtext. Bitte benachrichtigen Sie die Empf\u00e4nger manuell. 
+mailhelper.error.template.parse=Die E-Mail konnte nicht verschickt werden\: Parsefehler im Mailtext. Bitte benachrichtigen Sie die Empf\u00e4nger manuell.
+mailhelper.error.addressinvalid=Eine oder mehrere Adressen sind ung\u00fcltig: {0}
+mailhelper.error.single.addressinvalid=Die Adressen ist ung\u00fcltig.
 mailnotification.title=E-Mail-Benachrichtigung
 mailtemplateform.body=Nachricht
 
@@ -48,26 +48,26 @@ mail.admin.description=Konfiguration der OLAT E-Mail Versandoptionen und des Pos
 
 mail.admin.css=CSS
 mail.admin.intern.enabled=OLAT Postfach aktivieren
-mail.admin.default.settings=Standardeinstellung f\u00FCr E-Mail Versand
+mail.admin.default.settings=Standardeinstellung f\u00fcr E-Mail Versand
 mail.admin.inbox=Posteingang
 mail.admin.intern.only=E-Mails an das interne OLAT Postfach zustellen
-mail.admin.intern.real.mail=E-Mails an das interne OLAT Postfach und die pers\u00F6nliche E-Mail Adresse zustellen
+mail.admin.intern.real.mail=E-Mails an das interne OLAT Postfach und die pers\u00f6nliche E-Mail Adresse zustellen
 mail.admin.outbox=Postausgang
 mail.admin.preview.button=Vorschau
 mail.admin.preview.text=<h1>Lorem Ipsum</h1>Lorem Ipsum<br/><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium.<br/><br/><div class="o_email_button_group"><a class="o_email_button" href="https://www.openolat.com">Lorem Ipsum</a></div><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium. Quo corporis praesentium sit quasi repellat incidunt explicabo velit. <strong>Tenetur ea et nihil.</strong> Est dolores et facilis est minima et dolor. Voluptas veniam et ullam porro quia exercitationem.
 mail.admin.preview.title=E-Mail Vorschau
-mail.admin.reset.button=Zur\u00FCcksetzen auf Default
-mail.admin.reset.confirm=Wollen Sie das E-Mail Template wirklich auf das Default-Template zur\u00FCcksetzen?
+mail.admin.reset.button=Zur\u00fccksetzen auf Default
+mail.admin.reset.confirm=Wollen Sie das E-Mail Template wirklich auf das Default-Template zur\u00fccksetzen?
 mail.admin.show.mail.addresses=E-Mail Adressen anzeigen
-mail.admin.show.recipient.names=Namen der Empf\u00E4nger anzeigen
+mail.admin.show.recipient.names=Namen der Empf\u00e4nger anzeigen
 mail.settings=Einstellungen
 mail.template=E-Mail Vorlage
 mail.template.title=E-Mail Vorlage bearbeiten
-mail.template.description=\u00C4ndern Sie den HTML Code der E-Mail Vorlage um das Aussehen der versendeten E-Mails anzupassen. 
+mail.template.description=\u00c4ndern Sie den HTML Code der E-Mail Vorlage um das Aussehen der versendeten E-Mails anzupassen. 
 mail.attachments=Anhang
-mail.confirm.delete.title=E-Mails l\u00F6schen
-mail.confirm.delete.multi.text=Bitte best\u00E4tigen Sie, dass Sie die selektierten {0} E-Mails inklusive aller Anh\u00E4nge unwiderruflich l\u00F6schen wollen:
-mail.confirm.delete.single.text=Bitte best\u00E4tigen Sie, dass Sie die selektierte E-Mail inklusive aller Anh\u00E4nge unwiderruflich l\u00F6schen wollen:
+mail.confirm.delete.title=E-Mails l\u00f6schen
+mail.confirm.delete.multi.text=Bitte best\u00e4tigen Sie, dass Sie die selektierten {0} E-Mails inklusive aller Anh\u00e4nge unwiderruflich l\u00f6schen wollen:
+mail.confirm.delete.single.text=Bitte best\u00e4tigen Sie, dass Sie die selektierte E-Mail inklusive aller Anh\u00e4nge unwiderruflich l\u00f6schen wollen:
 mail.context=Kontext
 mail.from=Von
 mail.from.miscellaneous=Diverse
@@ -78,7 +78,7 @@ mail.outbox=Gesendet
 mail.outbox.alt=Gesendete E-Mails
 mail.outbox.title=Gesendete E-Mails
 mail.outbox.meta=diese E-Mails sind als Massen E-Mails versendet worden.
-mail.empty.box=Diese Mailbox enth\u00E4lt keine E-Mails.
+mail.empty.box=Diese Mailbox enth\u00e4lt keine E-Mails.
 mail.marked.header=<i class\="o_icon o_icon-lg o_icon_bookmark_header"> </i>
 mail.marked=Markiert
 mail.notification.type=E-Mails
@@ -100,17 +100,17 @@ mail.action.read=Gelesen
 mail.action.unread=Nicht gelesen 
 mail.action.mark=Markieren
 mail.action.unmark=Nicht markieren
-mail.action.emtpy=W\u00E4hlen Sie mindestens eine E-Mail aus um eine Aktion auszul\u00F6sen.
+mail.action.emtpy=W\u00e4hlen Sie mindestens eine E-Mail aus um eine Aktion auszul\u00f6sen.
 send.mail.title=Dateien per E-Mail versenden
-send.mail.description=Sie k\u00F6nnen E-Mail mit Dokumenten versenden
+send.mail.description=Sie k\u00f6nnen E-Mail mit Dokumenten versenden
 send.mail.attachments=Anhang
 send.mail.subject=Betreff
 send.mail.body=Nachricht
 send.mail.to=An
 send.mail.to.auto=An
 send.mail.to.auto.add=+
-send.mail.noFileSelected=Sie haben keine Dateien ausgew\u00E4hlt.
+send.mail.noFileSelected=Sie haben keine Dateien ausgew\u00e4hlt.
 send.mail.error=Achtung!!!
-send.mail.selectionContainsFolder=Nur einzelne Dateien k\u00F6nnen versendet werden.
-send.mail.fileToBigForAttachments={0}MB ist die maximale Gr\u00F6sse f\u00FCr Anh\u00E4nge. E-Mail wird nur Links zu Dokumenten enthalten.
+send.mail.selectionContainsFolder=Nur einzelne Dateien k\u00f6nnen versendet werden.
+send.mail.fileToBigForAttachments={0}MB ist die maximale Gr\u00f6sse f\u00fcr Anh\u00e4nge. E-Mail wird nur Links zu Dokumenten enthalten.
 
