--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_zh_CN.properties
@@ -1,77 +1,80 @@
 #Sun Oct 09 05:46:32 CEST 2016
-add.email=\u589E\u52A0
-contact.cp.from=\u53D1\u9001\u7ED9\u53D1\u4EF6\u4EBA\u7684\u590D\u4EF6
-footer.no.userdata=<p>\u8BE5\u6D88\u606F\u5DF2\u7ECF\u901A\u8FC7OpenOLAT\u81EA\u52A8\u53D1\u9001\: <a href="{0}">{0}</a></p>
-footer.with.userdata=<p>{2} {3} ({0}), {4} {5}</p><p>\u8BE5\u6D88\u606F\u5DF2\u7ECF\u901A\u8FC7 OpenOLAT\u53D1\u9001\: <a href="{1}">{1}</a></p>
-mail.action.emtpy=\u81F3\u5C11\u9009\u62E9\u4E00\u4E2Ae-mail\uFF0C\u624D\u80FD\u6267\u884C\u672C\u64CD\u4F5C
-mail.action.mark=\u6807\u8BB0
-mail.action.open=\u8BFB
-mail.action.send.real.success=\u4E3B\u9898\u201C{0}\u201D\u7684\u6D88\u606F\u5DF2\u53D1\u9001\u5230\u60A8\u7684\u4E2A\u4EBA\u90AE\u7BB1
-mail.action.unmark=\u53D6\u6D88\u6807\u8BB0
-mail.action.unread=\u672A\u8BFB
-mail.admin.default.settings=e-mail\u53D1\u9001\u7684\u6807\u51C6\u8BBE\u7F6E
-mail.admin.description=OLAT e-mail\u548C\u6536\u4EF6\u7BB1\u7684\u8BBE\u7F6E
-mail.admin.intern.enabled=\u542F\u7528OLAT e-mail\u6536\u4EF6\u7BB1
-mail.admin.intern.only=\u53D1\u9001e-mail\u5230\u5185\u90E8OLAT\u6536\u4EF6\u7BB1
-mail.admin.intern.real.mail=\u53D1\u9001e-mail\u5230\u5185\u90E8OLAT\u6536\u4EF6\u7BB1\u548C\u4E2A\u4EBAe-mail\u90AE\u7BB1
-mail.admin.title=E-mail\u6536\u4EF6\u7BB1\u548C\u53D1\u4EF6\u7BB1
-mail.attachments=\u9644\u4EF6
-mail.body=\u6D88\u606F
-mail.confirm.delete.multi.text=\u8BF7\u786E\u8BA4\u60A8\u771F\u7684\u8981\u5220\u9664\u9009\u62E9\u7684{0}e-mail\u53CA\u5176\u9644\u4EF6\u3002\u8BE5\u64CD\u4F5C\u4E0D\u80FD\u53D6\u6D88
-mail.confirm.delete.single.text=\u8BF7\u786E\u8BA4\u60A8\u771F\u7684\u8981\u5220\u9664\u9009\u62E9\u7684e-mail\u53CA\u5176\u9644\u4EF6\u3002\u8BE5\u64CD\u4F5C\u4E0D\u80FD\u53D6\u6D88
+mail.from=\u53d1\u9001\u8005
+
+
+add.email=\u589e\u52a0
+contact.cp.from=\u53d1\u9001\u7ed9\u53d1\u4ef6\u4eba\u7684\u590d\u4ef6
+footer.no.userdata=<p>\u8be5\u6d88\u606f\u5df2\u7ecf\u901a\u8fc7OpenOLAT\u81ea\u52a8\u53d1\u9001\: <a href="{0}">{0}</a></p>
+footer.with.userdata=<p>{2} {3} ({0}), {4} {5}</p><p>\u8be5\u6d88\u606f\u5df2\u7ecf\u901a\u8fc7 OpenOLAT\u53d1\u9001\: <a href="{1}">{1}</a></p>
+mail.action.emtpy=\u81f3\u5c11\u9009\u62e9\u4e00\u4e2ae-mail\uff0c\u624d\u80fd\u6267\u884c\u672c\u64cd\u4f5c
+mail.action.mark=\u6807\u8bb0
+mail.action.open=\u8bfb
+mail.action.send.real.success=\u4e3b\u9898\u201c{0}\u201d\u7684\u6d88\u606f\u5df2\u53d1\u9001\u5230\u60a8\u7684\u4e2a\u4eba\u90ae\u7bb1
+mail.action.unmark=\u53d6\u6d88\u6807\u8bb0
+mail.action.unread=\u672a\u8bfb
+mail.admin.default.settings=e-mail\u53d1\u9001\u7684\u6807\u51c6\u8bbe\u7f6e
+mail.admin.description=OLAT e-mail\u548c\u6536\u4ef6\u7bb1\u7684\u8bbe\u7f6e
+mail.admin.intern.enabled=\u542f\u7528OLAT e-mail\u6536\u4ef6\u7bb1
+mail.admin.intern.only=\u53d1\u9001e-mail\u5230\u5185\u90e8OLAT\u6536\u4ef6\u7bb1
+mail.admin.intern.real.mail=\u53d1\u9001e-mail\u5230\u5185\u90e8OLAT\u6536\u4ef6\u7bb1\u548c\u4e2a\u4ebae-mail\u90ae\u7bb1
+mail.admin.title=E-mail\u6536\u4ef6\u7bb1\u548c\u53d1\u4ef6\u7bb1
+mail.attachments=\u9644\u4ef6
+mail.body=\u6d88\u606f
+mail.confirm.delete.multi.text=\u8bf7\u786e\u8ba4\u60a8\u771f\u7684\u8981\u5220\u9664\u9009\u62e9\u7684{0}e-mail\u53ca\u5176\u9644\u4ef6\u3002\u8be5\u64cd\u4f5c\u4e0d\u80fd\u53d6\u6d88
+mail.confirm.delete.single.text=\u8bf7\u786e\u8ba4\u60a8\u771f\u7684\u8981\u5220\u9664\u9009\u62e9\u7684e-mail\u53ca\u5176\u9644\u4ef6\u3002\u8be5\u64cd\u4f5c\u4e0d\u80fd\u53d6\u6d88
 mail.confirm.delete.title=\u5220\u9664e-mail
-mail.context=\u6B63\u6587
-mail.empty.box=\u672C\u6536\u4EF6\u7BB1\u6CA1\u6709\u90AE\u4EF6
-mail.from=\u53D1\u4EF6\u4EBA
-mail.from.miscellaneous=\u5176\u4ED6
-mail.inbox=\u6536\u4EF6\u7BB1
-mail.inbox.alt=E-mail\u6536\u4EF6\u7BB1
-mail.marked=\u5DF2\u6807\u8BB0
+mail.context=\u6b63\u6587
+mail.empty.box=\u672c\u6536\u4ef6\u7bb1\u6ca1\u6709\u90ae\u4ef6
+mail.from=\u53d1\u4ef6\u4eba
+mail.from.miscellaneous=\u5176\u4ed6
+mail.inbox=\u6536\u4ef6\u7bb1
+mail.inbox.alt=E-mail\u6536\u4ef6\u7bb1
+mail.marked=\u5df2\u6807\u8bb0
 mail.marked.header=<i class\="o_icon o_icon-lg o_icon_bookmark_header"> </i>
 mail.notification.type=E-mails
-mail.outbox=\u53D1\u4EF6\u7BB1
-mail.outbox.alt=E-mail\u53D1\u4EF6\u7BB1
-mail.outbox.meta=\u8FD9\u4E9B\u7535\u5B50\u90AE\u4EF6\u5DF2\u88AB\u4F5C\u4E3A\u7FA4\u53D1\u7535\u5B50\u90AE\u4EF6\u53D1\u9001\u3002
-mail.outbox.title=E-mail\u53D1\u4EF6\u7BB1
-mail.read=\u5DF2\u8BFB
+mail.outbox=\u53d1\u4ef6\u7bb1
+mail.outbox.alt=E-mail\u53d1\u4ef6\u7bb1
+mail.outbox.meta=\u8fd9\u4e9b\u7535\u5b50\u90ae\u4ef6\u5df2\u88ab\u4f5c\u4e3a\u7fa4\u53d1\u7535\u5b50\u90ae\u4ef6\u53d1\u9001\u3002
+mail.outbox.title=E-mail\u53d1\u4ef6\u7bb1
+mail.read=\u5df2\u8bfb
 mail.read.header=<i class\="o_icon o_icon-lg o_icon_to_read"> </i>
 mail.receivedDate=\u6536\u5230
-mail.recipients=\u6536\u4EF6\u4EBA
-mail.sendDate=\u53D1\u9001\u65E5\u671F
-mail.settings=\u8BBE\u7F6E
-mail.subject=\u4E3B\u9898
-mail.template=E-mail\u6A21\u677F
-mail.template.description=\u4FEE\u6539e-mail\u6A21\u677F\u7684\uFF28\uFF34\uFF2D\uFF2C\u4EE3\u7801\uFF0C\u6539\u53D8\u7CFB\u7EDF\u53D1\u9001\u7684\u6240\u6709e-mail\u7684\u5916\u89C2
-mail.template.title=\u7F16\u8F91e-mail\u6A21\u677F
-mail.unmarked=\u53D6\u6D88\u6807\u8BB0
-mail.unread=\u672A\u8BFB
-mailhelper.error.addressinvalid=\u4E00\u4E2A\u6216\u591A\u4E2A\u5730\u5740\u65E0\u6548\uFF1A{0}
-mailhelper.error.attachment=\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\uFF1A\u65E0\u6548\u9644\u4EF6.\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u53D7\u8005.
-mailhelper.error.failedusers=\u4F60\u7684\u7535\u5B50\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\u7ED9\u4E0B\u9762\u7684\u7528\u6237\u3002\u8BF7\u4EBA\u5DE5\u901A\u77E5\u4ED6\u4EEC\u5E76\u8981\u6C42\u5176\u68C0\u67E5\u7535\u5B50\u90AE\u4EF6\u5730\u5740
-mailhelper.error.failedusers.title=\u4F7F\u90AE\u4EF6\u63A5\u6536\u8005\u7684\u7535\u5B50\u90AE\u4EF6\u5730\u5740\u65E0\u6548\u3002
-mailhelper.error.failedusers.user={0} {1}\u4F7F\u7528\u90AE\u4EF6\u5730\u5740 {2}\u5E76\u767B\u5165{3}
-mailhelper.error.recipient.address=\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\uFF1A\u65E0\u6548\u7684\u63A5\u53D7\u5730\u5740.\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u6536\u8005\u3002
-mailhelper.error.send.general=\u7531\u4E8E\u672A\u77E5\u95EE\u9898\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\u3002\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u53D7\u8005\u3002
-mailhelper.error.sender.address=\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\uFF1A\u65E0\u6548\u53D1\u9001\u8005\u5730\u5740\u3002\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u53D7\u8005\u3002
-mailhelper.error.template.general=\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\uFF1A\u90AE\u4EF6\u6587\u672C\u7684\u4E00\u822C\u6027\u9519\u8BEF\u3002\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u6536\u8005\u3002
-mailhelper.error.template.parse=\u90AE\u4EF6\u4E0D\u80FD\u88AB\u53D1\u9001\uFF1A\u90AE\u4EF6\u6587\u672C\u89E3\u6790\u9519\u8BEF\u3002\u8BF7\u4EBA\u5DE5\u901A\u77E5\u90AE\u4EF6\u63A5\u6536\u8005\u3002
-mailnotification.title=\u7535\u5B50\u90AE\u4EF6\u58F0\u660E
-mailtemplateform.body=\u90AE\u4EF6\u6B63\u6587
-mailtemplateform.continue=\u66F4\u591A
-mailtemplateform.error.emptyfield=\u8FD9\u4E2A\u5730\u65B9\u4E0D\u80FD\u4E3A\u7A7A
-mailtemplateform.error.velocity=\u7B26\u53F7\#\u4E0D\u80FD\u51FA\u73B0\u5728\u8FD9\u91CC
-mailtemplateform.sendMailSwitchElem=\u53D1\u9001\u7535\u5B50\u90AE\u4EF6
-mailtemplateform.subject=\u90AE\u4EF6\u4E3B\u9898
-menu.mail=\u7535\u5B50\u90AE\u4EF6
-menu.mail.alt=\u7535\u5B50\u90AE\u4EF6\u7CFB\u7EDF\u914D\u7F6E
-send.mail.attachments=\u9644\u4EF6
-send.mail.body=\u4FE1\u606F
-send.mail.description=\u60A8\u53EF\u4EE5\u5C06\u7535\u5B50\u90AE\u4EF6\u548C\u6587\u6863\u4E00\u8D77\u53D1\u9001
-send.mail.error=\u6CE8\u610F\!\!\!
-send.mail.fileToBigForAttachments=\u9644\u4EF6\u6700\u5927\u4E3A{0}\u5146\u3002\u7535\u5B50\u90AE\u4EF6\u4E2D\u53EA\u80FD\u542B\u6709\u5230\u6587\u6863\u7684\u94FE\u63A5\u3002
-send.mail.noFileSelected=\u60A8\u8FD8\u6CA1\u6709\u9009\u62E9\u6587\u4EF6\u3002
-send.mail.selectionContainsFolder=\u53EA\u80FD\u53D1\u9001\u5355\u4E2A\u6587\u4EF6\u3002
-send.mail.subject=\u4E3B\u9898
-send.mail.title=\u6587\u4EF6\u548C\u7535\u5B50\u90AE\u4EF6\u4E00\u8D77\u53D1\u9001
-send.mail.to=\u81F4
-send.mail.to.auto=To
+mail.recipients=\u6536\u4ef6\u4eba
+mail.sendDate=\u53d1\u9001\u65e5\u671f
+mail.settings=\u8bbe\u7f6e
+mail.subject=\u4e3b\u9898
+mail.template=E-mail\u6a21\u677f
+mail.template.description=\u4fee\u6539e-mail\u6a21\u677f\u7684\uff28\uff34\uff2d\uff2c\u4ee3\u7801\uff0c\u6539\u53d8\u7cfb\u7edf\u53d1\u9001\u7684\u6240\u6709e-mail\u7684\u5916\u89c2
+mail.template.title=\u7f16\u8f91e-mail\u6a21\u677f
+mail.unmarked=\u53d6\u6d88\u6807\u8bb0
+mail.unread=\u672a\u8bfb
+mailhelper.error.addressinvalid=\u4e00\u4e2a\u6216\u591a\u4e2a\u5730\u5740\u65e0\u6548\uff1a{0}
+mailhelper.error.attachment=\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\uff1a\u65e0\u6548\u9644\u4ef6.\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u53d7\u8005.
+mailhelper.error.failedusers=\u4f60\u7684\u7535\u5b50\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\u7ed9\u4e0b\u9762\u7684\u7528\u6237\u3002\u8bf7\u4eba\u5de5\u901a\u77e5\u4ed6\u4eec\u5e76\u8981\u6c42\u5176\u68c0\u67e5\u7535\u5b50\u90ae\u4ef6\u5730\u5740
+mailhelper.error.failedusers.title=\u4f7f\u90ae\u4ef6\u63a5\u6536\u8005\u7684\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u65e0\u6548\u3002
+mailhelper.error.failedusers.user={0} {1}\u4f7f\u7528\u90ae\u4ef6\u5730\u5740 {2}\u5e76\u767b\u5165{3}
+mailhelper.error.recipient.address=\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\uff1a\u65e0\u6548\u7684\u63a5\u53d7\u5730\u5740.\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u6536\u8005\u3002
+mailhelper.error.send.general=\u7531\u4e8e\u672a\u77e5\u95ee\u9898\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\u3002\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u53d7\u8005\u3002
+mailhelper.error.sender.address=\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\uff1a\u65e0\u6548\u53d1\u9001\u8005\u5730\u5740\u3002\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u53d7\u8005\u3002
+mailhelper.error.template.general=\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\uff1a\u90ae\u4ef6\u6587\u672c\u7684\u4e00\u822c\u6027\u9519\u8bef\u3002\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u6536\u8005\u3002
+mailhelper.error.template.parse=\u90ae\u4ef6\u4e0d\u80fd\u88ab\u53d1\u9001\uff1a\u90ae\u4ef6\u6587\u672c\u89e3\u6790\u9519\u8bef\u3002\u8bf7\u4eba\u5de5\u901a\u77e5\u90ae\u4ef6\u63a5\u6536\u8005\u3002
+mailnotification.title=\u7535\u5b50\u90ae\u4ef6\u58f0\u660e
+mailtemplateform.body=\u90ae\u4ef6\u6b63\u6587
+mailtemplateform.continue=\u66f4\u591a
+mailtemplateform.error.emptyfield=\u8fd9\u4e2a\u5730\u65b9\u4e0d\u80fd\u4e3a\u7a7a
+mailtemplateform.error.velocity=\u7b26\u53f7\#\u4e0d\u80fd\u51fa\u73b0\u5728\u8fd9\u91cc
+mailtemplateform.sendMailSwitchElem=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6
+mailtemplateform.subject=\u90ae\u4ef6\u4e3b\u9898
+menu.mail=\u7535\u5b50\u90ae\u4ef6
+menu.mail.alt=\u7535\u5b50\u90ae\u4ef6\u7cfb\u7edf\u914d\u7f6e
+send.mail.attachments=\u9644\u4ef6
+send.mail.body=\u4fe1\u606f
+send.mail.description=\u60a8\u53ef\u4ee5\u5c06\u7535\u5b50\u90ae\u4ef6\u548c\u6587\u6863\u4e00\u8d77\u53d1\u9001
+send.mail.error=\u6ce8\u610f\!\!\!
+send.mail.fileToBigForAttachments=\u9644\u4ef6\u6700\u5927\u4e3a{0}\u5146\u3002\u7535\u5b50\u90ae\u4ef6\u4e2d\u53ea\u80fd\u542b\u6709\u5230\u6587\u6863\u7684\u94fe\u63a5\u3002
+send.mail.noFileSelected=\u60a8\u8fd8\u6ca1\u6709\u9009\u62e9\u6587\u4ef6\u3002
+send.mail.selectionContainsFolder=\u53ea\u80fd\u53d1\u9001\u5355\u4e2a\u6587\u4ef6\u3002
+send.mail.subject=\u4e3b\u9898
+send.mail.title=\u6587\u4ef6\u548c\u7535\u5b50\u90ae\u4ef6\u4e00\u8d77\u53d1\u9001
+send.mail.to=\u81f4
+send.mail.to.auto=\u81f4
