--- a/src/main/java/org/olat/modules/co/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/co/_i18n/LocalStrings_de.properties
@@ -1,21 +1,21 @@
 #Mon Mar 02 09:54:04 CET 2009
 contact.body=Nachricht
-contact.cp.from = Kopie an Absender
+contact.cp.from = Kopie an Absender\u6d4b\u8bd5
 contact.list.sender = Absender
-contact.from=Von
-contact.subject=Betreff
-contact.to=An
-contact.to.groupname.undisclosedrecipients=Vordefinierte Empf\u00E4nger
+contact.from=Von \u4ece
+contact.subject=Betreff \u4e3b\u9898
+contact.to=An \u81f3
+contact.to.groupname.undisclosedrecipients=Vordefinierte Empf\u00e4nger
 contact.attachment=Anhang
-contact.attachment.maxsize={0} MB ist die maximal Gr\u00F6sse f\u00FCr Anh\u00e4nge
+contact.attachment.maxsize={0} MB ist die maximal Gr\u00f6sse f\u00fcr Anh\u00e4nge
 error.field.not.empty=Dieses Feld darf nicht leer sein
 error.field.not.valid.email=Es muss eine valide E-Mailadresse sein.
-error.msg.content.nok=Die Betreffzeile oder die Nachricht sind ung\u00FCltig.
+error.msg.content.nok=Die Betreffzeile oder die Nachricht sind ung\u00fcltig.
 error.msg.notconnectto.smtp=Die Verbindung zum SMTP-Server <i>{0}</i> konnte nicht hergestellt werden.
-error.msg.nousers=Die gew\u00E4hlte Empf\u00E4ngergruppe enth\u00E4lt keine Teilnehmer. Die E-Mail kann nicht abgeschickt werden.
-error.msg.send.553=Absender- und/oder Empf\u00E4ngeradresse ist nicht korrekt.
-error.msg.send.invalid.rcps=\u00DCberpr\u00FCfen Sie die Empf\u00E4ngeradressen\: {0}
-error.msg.send.no.rcps=Es wurden keine Empf\u00E4ngeradressen definiert.
+error.msg.nousers=Die gew\u00e4hlte Empf\u00e4ngergruppe enth\u00e4lt keine Teilnehmer. Die E-Mail kann nicht abgeschickt werden.
+error.msg.send.553=Absender- und/oder Empf\u00e4ngeradresse ist nicht korrekt.
+error.msg.send.invalid.rcps=\u00dcberpr\u00fcfen Sie die Empf\u00e4ngeradressen\: {0}
+error.msg.send.no.rcps=Es wurden keine Empf\u00e4ngeradressen definiert.
 error.msg.send.nok=Die Nachricht konnte nicht gesendet werden.
 error.msg.send.partially.nok=Die Nachricht konnte nur teilweise gesendet werden.
 error.msg.smtp.authentication.failed=Die SMTP-Authentifizierung ist fehlgeschlagen.
@@ -23,6 +23,6 @@ error.msg.unknown.smtp=Der SMTP-Server <i>{0}</i> kann nicht gefunden werden.
 error.title.nousers=Achtung
 header.newcntctmsg=Neue Nachricht
 msg.cancel=Abbrechen
-msg.changeRcpts=Empf\u00E4nger \u00E4ndern
+msg.changeRcpts=Empf\u00e4nger \u00e4ndern
 msg.save=Senden
 msg.send.ok=Die Nachricht wurde versendet.
