--- a/src/main/java/org/olat/core/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/_i18n/LocalStrings_zh_CN.properties
@@ -1,111 +1,121 @@
 #Wed Sep 26 11:47:44 CEST 2018
-alert=\u8BF7\u4E3A\u4F60\u7684\u64CD\u4F5C\u9009\u62E9\u4E00\u4E2A\u81F3\u5C11\u4E00\u4E2A\u76EE\u6807\u3002
-back=\u8FD4\u56DE
-calendar.choose=\u4ECE\u8FF7\u4F60\u65E5\u5386\u4E2D\u9009\u62E9\u4E00\u4E2A\u65E5\u671F
-cancel=\u53D6\u6D88
-close=\u5173\u95ED
-collapse=\u6700\u5C0F\u5316
-confirm.header=\u786E\u8BA4
+form.dirty.title=\u672a\u4fdd\u5b58\u7684\u8868\u5355\u6570\u636e
+form.dirty.intro=\u6ce8\u610f\ !\u60a8\u8fd8\u6ca1\u6709\u4fdd\u5b58\u6b64\u8868\u5355
+form.dirty.back=\u901a\u8fc7\u5355\u51fb<strong>$\:form.dirty.button</strong> \u53ef\u4ee5\u8fd4\u56de\u5230\u53ef\u4ee5\u4fdd\u5b58\u5b83\u7684\u8868\u5355\u3002
+form.dirty.ignore=\u901a\u8fc7\u5355\u51fb<strong>$\:form.dirty.button.ignore</strong> \u60a8\u5c06\u9000\u51fa\u800c\u8868\u5355\u4e0d\u4fdd\u5b58\u3002<strong>\u60a8\u5728\u6b64\u9875\u9762\u4e0a\u6240\u4f5c\u7684\u66f4\u6539\u5c06\u4f1a\u4e22\u5931</strong>
+form.dirty.button.back=\u8fd4\u56de\u8868\u5355
+form.dirty.button.ignore=\u4e0d\u4fdd\u5b58\u6570\u636e
+
+
+
+
+alert=\u8bf7\u4e3a\u4f60\u7684\u64cd\u4f5c\u9009\u62e9\u4e00\u4e2a\u81f3\u5c11\u4e00\u4e2a\u76ee\u6807\u3002
+back=\u8fd4\u56de
+calendar.choose=\u4ece\u8ff7\u4f60\u65e5\u5386\u4e2d\u9009\u62e9\u4e00\u4e2a\u65e5\u671f
+cancel=\u53d6\u6d88
+close=\u5173\u95ed
+collapse=\u6700\u5c0f\u5316
+confirm.header=\u786e\u8ba4
 confirmation.no.toolHelp=\u5426
-confirmation.yes.toolHelp=\u662F
-contact=\u8054\u7CFB
+confirmation.yes.toolHelp=\u662f
+contact=\u8054\u7cfb
 delete=\u5220\u9664
-edit=\u7F16\u8F91
-enabled=\u542F\u7528
-error.header=\u9519\u8BEF
-error.jpbwrapper.renderfailed=\u8BE5\u7EC4\u4EF6\u65E0\u6CD5\u518D\u6B21\u663E\u793A. \u8BF7\u91CD\u65B0\u542F\u52A8\u7EC4\u4EF6\u3002
-error.noformpostdata=\u6CE8\u610F\! \u7531\u4E8E\u6D4F\u89C8\u5668\u95EE\u9898\uFF0C\u4E00\u4E9B\u6570\u636E\u65E0\u6CD5\u4F20\u9001\u3002 \u8BF7\u6309 "\u8FD4\u56DE"\u6309\u94AE\u91CD\u8BD5\u3002
-error.post.method.mandatory=\u4F7F\u7528\u6D4F\u89C8\u5668
-expand=\u6269\u5C55
-export=\u5BFC\u51FA
-extsearch=\u9AD8\u7EA7\u641C\u7D22
-finish=\u5B8C\u6210
+edit=\u7f16\u8f91
+enabled=\u542f\u7528
+error.header=\u9519\u8bef
+error.jpbwrapper.renderfailed=\u8be5\u7ec4\u4ef6\u65e0\u6cd5\u518d\u6b21\u663e\u793a. \u8bf7\u91cd\u65b0\u542f\u52a8\u7ec4\u4ef6\u3002
+error.noformpostdata=\u6ce8\u610f\! \u7531\u4e8e\u6d4f\u89c8\u5668\u95ee\u9898\uff0c\u4e00\u4e9b\u6570\u636e\u65e0\u6cd5\u4f20\u9001\u3002 \u8bf7\u6309 "\u8fd4\u56de"\u6309\u94ae\u91cd\u8bd5\u3002
+error.post.method.mandatory=\u4f7f\u7528\u6d4f\u89c8\u5668
+expand=\u6269\u5c55
+export=\u5bfc\u51fa
+extsearch=\u9ad8\u7ea7\u641c\u7d22
+finish=\u5b8c\u6210
 form.checkall=\u5168\u9009
-form.date.datevalid=\u65E5\u671F\u5FC5\u987B\u6709\u6548
-form.dirty=\u6CE8\u610F\! \u8BE5\u9875\u9762\u8FD8\u672A\u4FDD\u5B58. \u70B9\u51FB\u786E\u5B9A\u540E\uFF0C\u60A8\u6240\u505A\u7684\u4FEE\u6539\u5C06\u4E22\u5931\u3002
-form.error.nointeger=\u975E\u6CD5\u6570\u636E\uFF0C\u8BF7\u8F93\u5165\u4E00\u4E2A\u6574\u6570\u3002
-form.general.error=\u8F93\u5165\u9519\u8BEF\u3002\u8BF7\u8003\u8651\u4E0E\u8F93\u5165\u533A\u57DF\u76F8\u90BB\u7684\u4FE1\u606F\u3002
-form.legende.mandatory=<i>\u8BF7\u586B\u5199\u8BE5\u5B57\u6BB5.</i>
-form.legende.wikiMarkup=<i>\u8BE5\u5B57\u6BB5\u5141\u8BB8\u4F7F\u7528wiki\u8BED\u6CD5\u683C\u5F0F\u3002</i> </br >*<b>\u7C97\u4F53</b>*<br>_<i>\u659C\u4F53</i>_<br>* \u6761\u76EE\u9879
-form.mandatory.hover=\u8BE5\u533A\u57DF\u5FC5\u987B\u586B\u5199\u3002
-form.uncheckall=\u53D6\u6D88\u9009\u62E9
-form.wiki.hover=\u8BE5\u5B57\u6BB5\u5141\u8BB8\u4F7F\u7528wiki\u8BED\u6CD5\u683C\u5F0F\u3002
-help=\u5E2E\u52A9
-help.button=\u5728\u624B\u518C\u4E2D\u67E5\u627E\u672C\u9875\u7684\u5E2E\u52A9
-help.manual=\u624B\u518C
-help.tooltip.link=\u66F4\u591A\u4FE1\u606F\uFF0C\u5355\u51FB{0}
-info.header=\u4FE1\u606F
-info.saved=\u60A8\u7684\u4FEE\u6539\u5DF2\u4FDD\u5B58
-input.toolong=\u60A8\u7684\u8F93\u5165\u8FC7\u957F\u3002\u6700\u591A\u5141\u8BB8\u8F93\u5165{0}\u5B57\u7B26\uFF0C\u5305\u62EC\u4EFB\u4F55html\u683C\u5F0F\u3002
-legend=\u56FE\u6807
-logout=\u6CE8\u9500
-module.change.warning=\u60A8\u5FC5\u987B\u91CD\u542FOpenOLAT\u4EE5\u4F7F\u60A8\u7684\u66F4\u6539\u5168\u9762\u751F\u6548\u3002
-new=\u65B0\u7684
-new.form.mandatory=\u6B64\u533A\u57DF\u5FC5\u987B\u586B\u5199\u3002
-next=\u7EE7\u7EED
+form.date.datevalid=\u65e5\u671f\u5fc5\u987b\u6709\u6548
+form.dirty=\u6ce8\u610f\! \u8be5\u9875\u9762\u8fd8\u672a\u4fdd\u5b58. \u70b9\u51fb\u786e\u5b9a\u540e\uff0c\u60a8\u6240\u505a\u7684\u4fee\u6539\u5c06\u4e22\u5931\u3002
+form.error.nointeger=\u975e\u6cd5\u6570\u636e\uff0c\u8bf7\u8f93\u5165\u4e00\u4e2a\u6574\u6570\u3002
+form.general.error=\u8f93\u5165\u9519\u8bef\u3002\u8bf7\u8003\u8651\u4e0e\u8f93\u5165\u533a\u57df\u76f8\u90bb\u7684\u4fe1\u606f\u3002
+form.legende.mandatory=<i>\u8bf7\u586b\u5199\u8be5\u5b57\u6bb5.</i>
+form.legende.wikiMarkup=<i>\u8be5\u5b57\u6bb5\u5141\u8bb8\u4f7f\u7528wiki\u8bed\u6cd5\u683c\u5f0f\u3002</i> </br >*<b>\u7c97\u4f53</b>*<br>_<i>\u659c\u4f53</i>_<br>* \u6761\u76ee\u9879
+form.mandatory.hover=\u8be5\u533a\u57df\u5fc5\u987b\u586b\u5199\u3002
+form.uncheckall=\u53d6\u6d88\u9009\u62e9
+form.wiki.hover=\u8be5\u5b57\u6bb5\u5141\u8bb8\u4f7f\u7528wiki\u8bed\u6cd5\u683c\u5f0f\u3002
+help=\u5e2e\u52a9
+help.button=\u5728\u624b\u518c\u4e2d\u67e5\u627e\u672c\u9875\u7684\u5e2e\u52a9
+help.manual=\u624b\u518c
+help.tooltip.link=\u66f4\u591a\u4fe1\u606f\uff0c\u5355\u51fb{0}
+info.header=\u4fe1\u606f
+info.saved=\u60a8\u7684\u4fee\u6539\u5df2\u4fdd\u5b58
+input.toolong=\u60a8\u7684\u8f93\u5165\u8fc7\u957f\u3002\u6700\u591a\u5141\u8bb8\u8f93\u5165{0}\u5b57\u7b26\uff0c\u5305\u62ec\u4efb\u4f55html\u683c\u5f0f\u3002
+legend=\u56fe\u6807
+logout=\u6ce8\u9500
+module.change.warning=\u60a8\u5fc5\u987b\u91cd\u542fOpenOLAT\u4ee5\u4f7f\u60a8\u7684\u66f4\u6539\u5168\u9762\u751f\u6548\u3002
+new=\u65b0\u7684
+new.form.mandatory=\u6b64\u533a\u57df\u5fc5\u987b\u586b\u5199\u3002
+next=\u7ee7\u7eed
 no=\u5426
-off=\u6765\u81EA
-ok=\u786E\u5B9A
-on=\u8FDB\u5165
-opfailed=\u64CD\u4F5C\u5931\u8D25\u3002
-opsuccess=\u64CD\u4F5C\u6210\u529F\u3002
+off=\u6765\u81ea
+ok=\u786e\u5b9a
+on=\u8fdb\u5165
+opfailed=\u64cd\u4f5c\u5931\u8d25\u3002
+opsuccess=\u64cd\u4f5c\u6210\u529f\u3002
 page.appname=OpenOLAT
 page.title=infinite learning
 placeholder={0}
 print=\u6253\u5370
-quick.search=\u7B80\u5355\u641C\u7D22
-rating.1.1=\u662F
-rating.2.1=\u5DEE
-rating.2.2=\u826F
+quick.search=\u7b80\u5355\u641c\u7d22
+rating.1.1=\u662f
+rating.2.1=\u5dee
+rating.2.2=\u826f
 rating.3.1=$\:rating.2.1
-rating.3.2=\u826F\u597D
+rating.3.2=\u826f\u597d
 rating.3.3=$\:rating.2.2
 rating.4.1=$\:rating.2.1
 rating.4.2=$\:rating.3.2
 rating.4.3=$\:rating.2.2
-rating.4.4=\u975E\u5E38\u597D
+rating.4.4=\u975e\u5e38\u597d
 rating.5.1=$\:rating.3.1
 rating.5.2=$\:rating.3.2
 rating.5.3=$\:rating.2.2
 rating.5.4=$\:rating.4.4
-rating.5.5=\u4F18\u79C0
-rating.explanation=\u70B9\u51FB\u6B64\u8FDB\u884C\u8BC4\u4EF7
-reset=\u91CD\u7F6E
-save=\u4FDD\u5B58
-save.admin.settings=\u8BBE\u7F6E\u5DF2\u4FDD\u5B58
-save.close=\u4FDD\u5B58\u540E\u5173\u95ED
-savesas=\u53E6\u5B58\u4E3A
-search=\u641C\u7D22
-select=\u9009\u62E9
-server.no.response=\u670D\u52A1\u5668\u6CA1\u6709\u53CD\u5E94\u6216\u8005\u8D85\u8F7D\uFF0C\u52A8\u4F5C\u4E0D\u80FD\u6267\u884C\u3002\u8BF7\u60A8\u91CD\u65B0\u64CD\u4F5C\u6216\u8005\u65B0\u52A0\u8F7D\u9875\u9762\u3002
-server.no.response.title=\u6C9F\u901A\u9519\u8BEF
-start=\u5F00\u59CB
-submit=\u4FDD\u5B58
-table.action=\u64CD\u4F5C
-table.backward=\u540E\u9000
-table.changecols=\u8C03\u6574\u8868\u683C
-table.download=\u4E0B\u8F7D\u8868\u683C
-table.entries=\u6761\u76EE
+rating.5.5=\u4f18\u79c0
+rating.explanation=\u70b9\u51fb\u6b64\u8fdb\u884c\u8bc4\u4ef7
+reset=\u91cd\u7f6e
+save=\u4fdd\u5b58
+save.admin.settings=\u8bbe\u7f6e\u5df2\u4fdd\u5b58
+save.close=\u4fdd\u5b58\u540e\u5173\u95ed
+savesas=\u53e6\u5b58\u4e3a
+search=\u641c\u7d22
+select=\u9009\u62e9
+server.no.response=\u670d\u52a1\u5668\u6ca1\u6709\u53cd\u5e94\u6216\u8005\u8d85\u8f7d\uff0c\u52a8\u4f5c\u4e0d\u80fd\u6267\u884c\u3002\u8bf7\u60a8\u91cd\u65b0\u64cd\u4f5c\u6216\u8005\u65b0\u52a0\u8f7d\u9875\u9762\u3002
+server.no.response.title=\u6c9f\u901a\u9519\u8bef
+start=\u5f00\u59cb
+submit=\u4fdd\u5b58
+table.action=\u64cd\u4f5c
+table.backward=\u540e\u9000
+table.changecols=\u8c03\u6574\u8868\u683c
+table.download=\u4e0b\u8f7d\u8868\u683c
+table.entries=\u6761\u76ee
 table.entries.dative=\u9879
-table.entry=\u6761\u76EE
-table.forward=\u5411\u524D
-table.header.choice=\u9009\u62E9
-table.sEmptyTable=\u8868\u683C\u4E2D\u6CA1\u6709\u6570\u636E
-table.sInfo=\u5C55\u793A _ \u5F00\u59CB _ \u5230 _ \u7ED3\u675F _ \u6709 _ \u603B\u8BA1 _ \u767B\u8BB0
-table.showall=\u5168\u90E8\u663E\u793A
+table.entry=\u6761\u76ee
+table.forward=\u5411\u524d
+table.header.choice=\u9009\u62e9
+table.sEmptyTable=\u8868\u683c\u4e2d\u6ca1\u6709\u6570\u636e
+table.sInfo=\u5c55\u793a _ \u5f00\u59cb _ \u5230 _ \u7ed3\u675f _ \u6709 _ \u603b\u8ba1 _ \u767b\u8bb0
+table.showall=\u5168\u90e8\u663e\u793a
 table.showpages=\u9875
 this.language.in.english=Simplified Chinese
-this.language.translated=\u7B80\u4F53\u4E2D\u6587
-this.language.translator.names=Hanna Chen, Maggie Dang, Vivi Li, Jonathan Luo, Karen Zhang, Qinrong Zhou, bin wu(matthew wu),Kehua Gao(\u9AD8\u79D1\u534E),
-tomcat.options.restart=\u7ACB\u5373\u91CD\u542F
-tomcat.options.restartonidle=\u53EA\u8981\u6CA1\u6709\u7528\u6237\u7ACB\u5373\u91CD\u542F
-toolbox.actions=\u64CD\u4F5C
-top=\u8F6C\u5230\u9876\u90E8
-top.alt=\u8F6C\u5230\u8BE5\u9875\u9876\u90E8
-user.guest=\u6E38\u5BA2
-warn.beta.feature=\u8BF7\u6CE8\u610F\uFF01\u6B64\u529F\u80FD\u5728\u6D4B\u8BD5\u9636\u6BB5\u3002\u8BF7\u60A8\u6CE8\u610F\uFF0C\u4F7F\u7528\u6B64\u529F\u80FD\u53EF\u80FD\u4F1A\u5BFC\u81F4\u9519\u8BEF\u3002
-warn.header=\u8BF7\u6CE8\u610F
-warn.notdispatched=\u8BE5\u9875\u5DF2\u7ECF\u88AB\u4FEE\u6539\u3002\u8BF7\u60A8\u6CE8\u610F\u53EF\u80FD\u7684\u6D88\u606F\u3002
-warn.reload=\u8BF7\u60A8\u4E0D\u8981\u4F7F\u7528\u6D4F\u89C8\u5668\u7684`\u5237\u65B0`\u6216`\u8FD4\u56DE`\u6309\u94AE\u3002
-welcome=\u6B22\u8FCE
-yes=\u662F
+this.language.translated=\u7b80\u4f53\u4e2d\u6587
+this.language.translator.names=Hanna Chen, Maggie Dang, Vivi Li, Jonathan Luo, Karen Zhang, Qinrong Zhou, bin wu(matthew wu),Kehua Gao(\u9ad8\u79d1\u534e),
+tomcat.options.restart=\u7acb\u5373\u91cd\u542f
+tomcat.options.restartonidle=\u53ea\u8981\u6ca1\u6709\u7528\u6237\u7acb\u5373\u91cd\u542f
+toolbox.actions=\u64cd\u4f5c
+top=\u8f6c\u5230\u9876\u90e8
+top.alt=\u8f6c\u5230\u8be5\u9875\u9876\u90e8
+user.guest=\u6e38\u5ba2
+warn.beta.feature=\u8bf7\u6ce8\u610f\uff01\u6b64\u529f\u80fd\u5728\u6d4b\u8bd5\u9636\u6bb5\u3002\u8bf7\u60a8\u6ce8\u610f\uff0c\u4f7f\u7528\u6b64\u529f\u80fd\u53ef\u80fd\u4f1a\u5bfc\u81f4\u9519\u8bef\u3002
+warn.header=\u8bf7\u6ce8\u610f
+warn.notdispatched=\u8be5\u9875\u5df2\u7ecf\u88ab\u4fee\u6539\u3002\u8bf7\u60a8\u6ce8\u610f\u53ef\u80fd\u7684\u6d88\u606f\u3002
+warn.reload=\u8bf7\u60a8\u4e0d\u8981\u4f7f\u7528\u6d4f\u89c8\u5668\u7684`\u5237\u65b0`\u6216`\u8fd4\u56de`\u6309\u94ae\u3002
+welcome=\u6b22\u8fce
+yes=\u662f
