--- a/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/richText/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/richText/_i18n/LocalStrings_zh_CN.properties
@@ -1,2 +1,4 @@
 #Sat Oct 22 02:33:12 CEST 2016
-richText.element.target.window.alwayssame=\u603B\u5728\u540C\u4E00\u4E2A\u65B0\u7A97\u53E3\u5185\u6253\u5F00\u94FE\u63A5\u3002
+richText.element.target.window.alwayssame=\u603b\u5728\u540c\u4e00\u4e2a\u65b0\u7a97\u53e3\u5185\u6253\u5f00\u94fe\u63a5\u3002
+multiLine=\u591a\u884c
+formatted=\u683c\u5f0f\u5316
