--- a/src/main/java/org/olat/course/config/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/config/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,34 +1,43 @@
 #Sun Mar 19 11:13:20 CET 2017
-chkbx.calendar.onoff=\u5728\u5B66\u7A0B\u5DE5\u5177\u7BB1\u4E2D\u663E\u793A\u65E5\u5386
-chkbx.chat.onoff=\u542F\u7528\u5B66\u7A0B\u8BA8\u8BBA
-chkbx.efficency.onoff=\u542F\u7528\u6210\u7EE9\u5355
-chkbx.menu.onoff=\u53C2\u5165\u8005\u548C\u8BB2\u5E08\u53EF\u89C1\u7684\u83DC\u5355
-chkbx.search.onoff=\u542F\u7528\u8BFE\u7A0B\u641C\u7D22
-command.choose=\u9009\u62E9
-command.glossary.add=\u9009\u62E9\u8BCD\u6C47\u672F\u8BED\u8868
-command.glossary.remove=\u5220\u9664\u88AB\u9009\u4E2D\u7684
-course.log.changed.message=<br>\u53EF\u4EE5\u4F7F\u7528\u5B58\u6863\u5DE5\u5177\u4E0B\u8F7D\u8BE6\u7EC6\u7684\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6\u3002<br><br>\u65E7\u7248\u672C\u7684\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6\uFF08OLAT 6.2\u6216\u66F4\u65E9\u7684\u7248\u672C\uFF09\u4F4D\u4E8E\u60A8\u5B66\u7A0B\u5B58\u50A8\u6587\u4EF6\u5939\u4E2D
-coursefolder=\u5B58\u50A8\u5939
-form.layout.changecustomcss=\u6539\u53D8CSS
-form.layout.choosecustomcss=\u9009\u62E9\u5176\u5B83CSS
-form.layout.choosesystemcss=\u9009\u62E9\u9ED8\u8BA4CSS
-form.layout.cssfile=\u5DF2\u9009\u6587\u4EF6
-form.layout.setsystemcss=<i>\u9ED8\u8BA4\u7684CSS</i>
-glossary.description=\u63CF\u8FF0
-glossary.isconfigured=\u9009\u62E9\u672F\u8BED\u8BCD\u6C47\u8868
-glossary.no.glossary=\u6CA1\u6709\u9009\u62E9\u4EFB\u4F55\u672F\u8BED\u8BCD\u6C47\u8868
+chkbx.toolbar.onoff=\u53c2\u4e0e\u8005\u53ef\u89c1\u7684\u5de5\u5177\u680f
+chkbx.toolbar.explain=\u6fc0\u6d3b\u5de5\u5177\u680f\u4e2d\u7684\u5de5\u5177:
+chkbx.glossary.explain=\u672f\u8bed\u8868\u9700\u8981\u5728\u201c\u9009\u9879\u201d\u4e0b\u914d\u7f6e\u3002
+details.options.title=\u8bcd\u6c47\u8868\u548c\u8d44\u6e90\u6587\u4ef6\u5939
+tab.layout.title=\u5e03\u5c40
+chkbx.breadcrumb.onoff=\u9762\u5305\u74e4\u5bfc\u822a
+
+
+
+chkbx.calendar.onoff=\u5728\u5b66\u7a0b\u5de5\u5177\u7bb1\u4e2d\u663e\u793a\u65e5\u5386
+chkbx.chat.onoff=\u542f\u7528\u5b66\u7a0b\u8ba8\u8bba
+chkbx.efficency.onoff=\u542f\u7528\u6210\u7ee9\u5355
+chkbx.menu.onoff=\u53c2\u5165\u8005\u548c\u8bb2\u5e08\u53ef\u89c1\u7684\u83dc\u5355
+chkbx.search.onoff=\u542f\u7528\u8bfe\u7a0b\u641c\u7d22
+command.choose=\u9009\u62e9
+command.glossary.add=\u9009\u62e9\u8bcd\u6c47\u672f\u8bed\u8868
+command.glossary.remove=\u5220\u9664\u88ab\u9009\u4e2d\u7684
+course.log.changed.message=<br>\u53ef\u4ee5\u4f7f\u7528\u5b58\u6863\u5de5\u5177\u4e0b\u8f7d\u8be6\u7ec6\u7684\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6\u3002<br><br>\u65e7\u7248\u672c\u7684\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6\uff08OLAT 6.2\u6216\u66f4\u65e9\u7684\u7248\u672c\uff09\u4f4d\u4e8e\u60a8\u5b66\u7a0b\u5b58\u50a8\u6587\u4ef6\u5939\u4e2d
+coursefolder=\u5b58\u50a8\u5939
+form.layout.changecustomcss=\u6539\u53d8CSS
+form.layout.choosecustomcss=\u9009\u62e9\u5176\u5b83CSS
+form.layout.choosesystemcss=\u9009\u62e9\u9ed8\u8ba4CSS
+form.layout.cssfile=\u5df2\u9009\u6587\u4ef6
+form.layout.setsystemcss=<i>\u9ed8\u8ba4\u7684CSS</i>
+glossary.description=\u63cf\u8ff0
+glossary.isconfigured=\u9009\u62e9\u672f\u8bed\u8bcd\u6c47\u8868
+glossary.no.glossary=\u6ca1\u6709\u9009\u62e9\u4efb\u4f55\u672f\u8bed\u8bcd\u6c47\u8868
 glossary.title=\u6807\u9898
-lock.failed=\u7528\u6237{0}\u4ECE{1}\u8D77\u4E00\u76F4\u5728\u8BBE\u7F6E\u8BE5\u8BFE\u7A0B\u3002
-selectfile=\u9009\u62E9\u6587\u4EF6
-sf.changesfresource=\u66FF\u6362
-sf.notconfigured=<i>\u672A\u9009\u4E2D\u8D44\u6E90\u6587\u4EF6\u5939<i>
-sf.resourcetitle=\u5DF2\u9009\u8D44\u6E90\u6587\u4EF6\u5939
-sf.selectsfresource=\u9009\u62E9
-sf.unselectsfresource=\u53CD\u9009
-tab.calendar.title=\u8BBE\u7F6E
-tab.chat.title=\u8BBE\u7F6E
-tab.efficency.title=\u8BBE\u7F6E
-tab.glossary.title=\u8BFE\u7A0B\u8BCD\u6C47\u8868
-tab.sharedfolder.title=\u8BBE\u7F6E
-warning.change.todisabled=\u6CE8\u610F\uFF1A\u5C06\u5220\u9664\u5230\u73B0\u5728\u4E3A\u6B62\u521B\u5EFA\u7684\u6240\u6709\u6210\u7EE9\u5355\uFF01
-warning.change.toenable=\u9009\u62E9\u201C\u6210\u7EE9\u5355\u201D\u5C06\u4E3A\u8BE5\u8BFE\u7A0B\u521B\u5EFA\u6210\u7EE9\u8BB0\u5F55\uFF0C\u8BF7\u7A0D\u7B49\u3002
+lock.failed=\u7528\u6237{0}\u4ece{1}\u8d77\u4e00\u76f4\u5728\u8bbe\u7f6e\u8be5\u8bfe\u7a0b\u3002
+selectfile=\u9009\u62e9\u6587\u4ef6
+sf.changesfresource=\u66ff\u6362
+sf.notconfigured=<i>\u672a\u9009\u4e2d\u8d44\u6e90\u6587\u4ef6\u5939<i>
+sf.resourcetitle=\u5df2\u9009\u8d44\u6e90\u6587\u4ef6\u5939
+sf.selectsfresource=\u9009\u62e9
+sf.unselectsfresource=\u53cd\u9009
+tab.calendar.title=\u8bbe\u7f6e
+tab.chat.title=\u8bbe\u7f6e
+tab.efficency.title=\u8bbe\u7f6e
+tab.glossary.title=\u8bfe\u7a0b\u8bcd\u6c47\u8868
+tab.sharedfolder.title=\u8bbe\u7f6e
+warning.change.todisabled=\u6ce8\u610f\uff1a\u5c06\u5220\u9664\u5230\u73b0\u5728\u4e3a\u6b62\u521b\u5efa\u7684\u6240\u6709\u6210\u7ee9\u5355\uff01
+warning.change.toenable=\u9009\u62e9\u201c\u6210\u7ee9\u5355\u201d\u5c06\u4e3a\u8be5\u8bfe\u7a0b\u521b\u5efa\u6210\u7ee9\u8bb0\u5f55\uff0c\u8bf7\u7a0d\u7b49\u3002
