--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,11 +1,81 @@
 #Sun Mar 19 10:15:41 CET 2017
 lifecycle.validTo=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
 table.header.lifecycle.end=\u7ed3\u675f\u65e5\u671f$\:cif.date.end
+details.delete.soft.desc=\u4f7f\u7528\u6b64\u65b9\u6cd5\u5c06\u5b66\u4e60\u8d44\u6e90\u6807\u8bb0\u4e3a\u5df2\u5220\u9664\u3002
+details.delete.soft.desc.1=\u7528\u6237\u6570\u636e\u5c06\u4ece\u8bfe\u7a0b\u4e2d\u5220\u9664\u3002
+details.delete.soft.desc.2=\u53ea\u6709\u8bfe\u7a0b\u6240\u6709\u8005\u624d\u80fd\u8bbf\u95ee\u8be5\u8bfe\u7a0b\u3002
+details.delete.soft.desc.3=\u8bfe\u7a0b\u53ef\u4ee5\u5728\u201c\u5df2\u5220\u9664\u201d\u9009\u9879\u5361\u4e2d\u627e\u5230\u3002
+details.delete.alt=\u5220\u9664 {0}
+
+
 cif.externalref=\u53c2\u8003
 cif.objectives=\u76ee\u6807
 cif.requirements=\u9700\u6c42
 cif.credits=\u8ba4\u8bc1
+cif.mainLanguage=\u4e3b\u8bed\u8a00
+cif.expenditureOfWork=\u6240\u8017\u65f6\u95f4
+details.expenditureOfWork.desc=\u6240\u8017\u65f6\u95f4
+details.expenditureOfWork.example=\u5b9e\u4f8b: \u6bcf\u5468\u5de5\u4f5c5-7\u5c0f\u65f6
+table.header.license=\u8bb8\u53ef
+cif.license=\u8bb8\u53ef
+cif.dates=\u6267\u884c\u5468\u671f
+orderby.lifecycle=\u6267\u884c\u5468\u671f
+cif.dates.none=\u65e0
+cif.dates.private=\u6709\u5f00\u59cb\u7ed3\u675f\u65f6\u95f4
+cif.dates.public=\u5b66\u671f
+cif.location=\u4f4d\u7f6e
+cif.organisations=\u7ec4\u7ec7
+rentry.access.type=\u7ec4\u7ec7\u6210\u5458\u7684\u8bbf\u95ee\u6743\u9650
+rentry.access.type.private.explain=\u884c\u653f\u7ba1\u7406\u4f1a\u5458
+rentry.access.type.booking.explain=\u6309\u7528\u6237\u9700\u8981\u9884\u8ba2
+rentry.access.type.shared.explain=\u6ca1\u6709\u9884\u8ba2
 
+rentry.access.type.explain=\u8bbf\u95ee\u81ea\u52a8\u5141\u8bb8\u4e0e\u72b6\u6001"$\:cif.status.published" \u6216\u8005 "$\:cif.status.closed"
+rentry.leave.option=\u4f1a\u5458\u53ef\u81ea\u884c\u9000\u8ba2
+rentry.access.author.title=\u5206\u4eab\u7ed9\u5176\u4ed6\u4f5c\u8005
+cif.author.can=\u4f5c\u8005\u53ef\u4ee5
+cif.canReference=\u53c2\u8003
+cif.canCopy=\u590d\u5236
+cif.canDownload=\u4e0b\u8f7d
+rentry.access.author.explain=\u72b6\u6001 "$\:cif.status.review", "$\:cif.status.coachpublished", "$\:cif.status.published" \u6216\u8005 "$\:cif.status.closed" \u81ea\u52a8\u5141\u8bb8\u8bbf\u95ee
+change.to.delete=\u5220\u9664
+
+search.catalog=\u76ee\u5f55
+no.catalog.entries=\u6b64\u8d44\u6e90\u5c1a\u672a\u6dfb\u52a0\u5230\u76ee\u5f55\u4e2d\u3002\r\n\r\n\u4f7f\u7528\u4e0a\u9762\u5de5\u5177\u680f\u4e2d\u7684\u201c\u6dfb\u52a0\u5230\u76ee\u5f55\u201d\u6309\u94ae\u5c06\u8d44\u6e90\u6dfb\u52a0\u5230\u76ee\u5f55\u4e2d\u7684\u7279\u5b9a\u7ea7\u522b\u3002\u76ee\u5f55\u5141\u8bb8\u7528\u6237\u6839\u636e\u8d44\u6e90\u8bbf\u95ee\u914d\u7f6e\u6d4f\u89c8\u53ef\u7528\u8d44\u6e90\u3002\u60a8\u53ef\u4ee5\u5c06\u8d44\u6e90\u6dfb\u52a0\u5230\u591a\u4e2a\u76ee\u5f55\u7ea7\u522b\u3002
+details.catalog=\u76ee\u5f55
+
+tab.layout=\u5e03\u5c40
+details.layout=\u5e03\u5c40
+
+
+details.toolbar=\u5de5\u5177\u680f
+details.toolbar.title=$\:details.toolbar
+
+
+details.certificates=\u6548\u7387\u58f0\u660e
+tab.efficencystatement=\u6210\u7ee9\u8bc1\u660e
+details.settings=\u8bbe\u7f6e
+
+details.options=\u9009\u9879
+
+
+
+details.access=\u5165\u53e3
+table.header.ac=\u5165\u53e3
+rentry.access.title=\u8bbf\u95ee\u548c\u9884\u5b9a\u914d\u7f6e
+
+
+
+
+
+details.info.title=\u4fe1\u606f
+details.info=\u8d44\u6599
+details.metadata=\u5143\u6570\u636e
+details.execution=\u6267\u884c
+details.execution.title=\u6267\u884c\u914d\u7f6e
+
+
+details.members=\u6210\u5458\u7ba1\u7406
 
 
 
@@ -454,6 +524,7 @@ tools.add.webdoc=\u5176\u5b83\u683c\u5f0f
 tools.add.wiki=\u7ef4\u57fa
 tools.administration.header=\u6c47\u603b\u529f\u80fd
 tools.delete.header=\u5220\u9664
+details.lifecycle.change=\u5220\u9664
 tools.delete.resource=\u5220\u9664\u8d44\u6e90
 tools.details.header=\u5b66\u4e60\u8d44\u6e90
 tools.edit.catalog=\u5206\u7c7b\u767b\u8bb0
